@@ -16,19 +16,24 @@
 
 package org.hotswap.agent.javassist;
 
-import org.hotswap.agent.javassist.bytecode.Descriptor;
-
-import java.io.*;
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.security.AccessController;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.security.ProtectionDomain;
-import java.util.ArrayList;
-import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.Iterator;
+import java.util.ArrayList;
+import java.util.Enumeration;
+
+import org.hotswap.agent.javassist.bytecode.ClassFile;
+import org.hotswap.agent.javassist.bytecode.Descriptor;
 
 /**
  * A container of <code>CtClass</code> objects.
@@ -38,9 +43,9 @@ import java.util.Iterator;
  * to find a class file and then it creates a <code>CtClass</code> object
  * representing that class file.  The created object is returned to the
  * caller.
- * <p/>
+ *
  * <p><b>Memory consumption memo:</b>
- * <p/>
+ *
  * <p><code>ClassPool</code> objects hold all the <code>CtClass</code>es
  * that have been created so that the consistency among modified classes
  * can be guaranteed.  Thus if a large number of <code>CtClass</code>es
@@ -50,9 +55,9 @@ import java.util.Iterator;
  * Note that <code>getDefault()</code> is a singleton factory.
  * Otherwise, <code>detach()</code> in <code>CtClass</code> should be used
  * to avoid huge memory consumption.
- * <p/>
+ *
  * <p><b><code>ClassPool</code> hierarchy:</b>
- * <p/>
+ *
  * <p><code>ClassPool</code>s can make a parent-child hierarchy as
  * <code>java.lang.ClassLoader</code>s.  If a <code>ClassPool</code> has
  * a parent pool, <code>get()</code> first asks the parent pool to find
@@ -61,60 +66,53 @@ import java.util.Iterator;
  * the child <code>ClassPool</code>.  This search order is reversed if
  * <code>ClassPath.childFirstLookup</code> is <code>true</code>.
  *
- * @see CtClass
- * @see org.hotswap.agent.javassist.ClassPath
+ * @see javassist.CtClass
+ * @see javassist.ClassPath
  */
 public class ClassPool {
-    // used by toClass().
-    private static java.lang.reflect.Method defineClass1, defineClass2;
-    private static java.lang.reflect.Method definePackage;
+    private static java.lang.reflect.Method definePackage = null;
 
     static {
-        try {
-            AccessController.doPrivileged(new PrivilegedExceptionAction() {
-                public Object run() throws Exception {
-                    Class cl = Class.forName("java.lang.ClassLoader");
-                    defineClass1 = cl.getDeclaredMethod("defineClass",
-                            new Class[]{String.class, byte[].class,
-                                    int.class, int.class});
-
-                    defineClass2 = cl.getDeclaredMethod("defineClass",
-                            new Class[]{String.class, byte[].class,
-                                    int.class, int.class, ProtectionDomain.class});
-
-                    definePackage = cl.getDeclaredMethod("definePackage",
-                            new Class[]{String.class, String.class, String.class,
-                                    String.class, String.class, String.class,
-                                    String.class, java.net.URL.class});
-                    return null;
-                }
-            });
-        } catch (PrivilegedActionException pae) {
-            throw new RuntimeException("cannot initialize ClassPool", pae.getException());
-        }
+        if (ClassFile.MAJOR_VERSION < ClassFile.JAVA_9)
+            try {
+                AccessController.doPrivileged(new PrivilegedExceptionAction(){
+                    public Object run() throws Exception{
+                        Class cl = Class.forName("java.lang.ClassLoader");
+                        definePackage = cl.getDeclaredMethod("definePackage",
+                                new Class[] { String.class, String.class, String.class,
+                                        String.class, String.class, String.class,
+                                        String.class, java.net.URL.class });
+                        return null;
+                    }
+                });
+            }
+            catch (PrivilegedActionException pae) {
+                throw new RuntimeException("cannot initialize ClassPool",
+                                           pae.getException());
+            }
     }
 
     /**
      * Determines the search order.
-     * <p/>
+     *
      * <p>If this field is true, <code>get()</code> first searches the
      * class path associated to this <code>ClassPool</code> and then
      * the class path associated with the parent <code>ClassPool</code>.
      * Otherwise, the class path associated with the parent is searched
      * first.
-     * <p/>
+     *
      * <p>The default value is false.
      */
     public boolean childFirstLookup = false;
 
     /**
      * Turning the automatic pruning on/off.
-     * <p/>
+     *
      * <p>If this field is true, <code>CtClass</code> objects are
      * automatically pruned by default when <code>toBytecode()</code> etc.
      * are called.  The automatic pruning can be turned on/off individually
      * for each <code>CtClass</code> object.
-     * <p/>
+     *
      * <p>The initial value is false.
      *
      * @see CtClass#prune()
@@ -133,7 +131,7 @@ public class ClassPool {
     /**
      * If true, unmodified and not-recently-used class files are
      * periodically released for saving memory.
-     * <p/>
+     *
      * <p>The initial value is true.
      */
     public static boolean releaseUnmodifiedClassFile = true;
@@ -164,8 +162,8 @@ public class ClassPool {
      * this constructor is equivalent to the constructor taking no
      * parameter.
      *
-     * @param useDefaultPath true if the system search path is
-     *                       appended.
+     * @param useDefaultPath    true if the system search path is
+     *                          appended.
      */
     public ClassPool(boolean useDefaultPath) {
         this(null);
@@ -176,9 +174,9 @@ public class ClassPool {
     /**
      * Creates a class pool.
      *
-     * @param parent the parent of this class pool.  If this is a root
-     *               class pool, this parameter must be <code>null</code>.
-     * @see ClassPool#getDefault()
+     * @param parent    the parent of this class pool.  If this is a root
+     *                  class pool, this parameter must be <code>null</code>.
+     * @see javassist.ClassPool#getDefault()
      */
     public ClassPool(ClassPool parent) {
         this.classes = new Hashtable(INIT_HASH_SIZE);
@@ -199,22 +197,23 @@ public class ClassPool {
      * Returns the default class pool.
      * The returned object is always identical since this method is
      * a singleton factory.
-     * <p/>
+     *
      * <p>The default class pool searches the system search path,
      * which usually includes the platform library, extension
      * libraries, and the search path specified by the
      * <code>-classpath</code> option or the <code>CLASSPATH</code>
      * environment variable.
-     * <p/>
+     *
      * <p>When this method is called for the first time, the default
      * class pool is created with the following code snippet:
-     * <p/>
-     * <ul><code>ClassPool cp = new ClassPool();
+     *
+     * <pre>ClassPool cp = new ClassPool();
      * cp.appendSystemPath();
-     * </code></ul>
-     * <p/>
+     * </pre>
+     *
      * <p>If the default class pool cannot find any class files,
-     * try <code>ClassClassPath</code> and <code>LoaderClassPath</code>.
+     * try <code>ClassClassPath</code>, <code>ModuleClassPath</code>,
+     * or <code>LoaderClassPath</code>.
      *
      * @see ClassClassPath
      * @see LoaderClassPath
@@ -234,11 +233,11 @@ public class ClassPool {
      * Provide a hook so that subclasses can do their own
      * caching of classes.
      *
-     * @see #cacheCtClass(String, CtClass, boolean)
+     * @see #cacheCtClass(String,CtClass,boolean)
      * @see #removeCached(String)
      */
     protected CtClass getCached(String classname) {
-        return (CtClass) classes.get(classname);
+        return (CtClass)classes.get(classname);
     }
 
     /**
@@ -246,7 +245,7 @@ public class ClassPool {
      * caching of classes.
      *
      * @see #getCached(String)
-     * @see #removeCached(String, CtClass)
+     * @see #removeCached(String)
      */
     protected void cacheCtClass(String classname, CtClass c, boolean dynamic) {
         classes.put(classname, c);
@@ -257,10 +256,10 @@ public class ClassPool {
      * caching of classes.
      *
      * @see #getCached(String)
-     * @see #cacheCtClass(String, CtClass, boolean)
+     * @see #cacheCtClass(String,CtClass,boolean)
      */
     protected CtClass removeCached(String classname) {
-        return (CtClass) classes.remove(classname);
+        return (CtClass)classes.remove(classname);
     }
 
     /**
@@ -279,7 +278,7 @@ public class ClassPool {
             compressCount = 0;
             Enumeration e = classes.elements();
             while (e.hasMoreElements())
-                ((CtClass) e.nextElement()).compress();
+                ((CtClass)e.nextElement()).compress();
         }
     }
 
@@ -288,16 +287,16 @@ public class ClassPool {
      * the package to resolve a class name.
      * Don't record the <code>java.lang</code> package, which has
      * been implicitly recorded by default.
-     * <p/>
+     *
      * <p>Since version 3.14, <code>packageName</code> can be a
      * fully-qualified class name.
-     * <p/>
+     *
      * <p>Note that <code>get()</code> in <code>ClassPool</code> does
      * not search the recorded package.  Only the compiler searches it.
      *
-     * @param packageName the package name.
-     *                    It must not include the last '.' (dot).
-     *                    For example, "java.util" is valid but "java.util." is wrong.
+     * @param packageName       the package name.
+     *         It must not include the last '.' (dot).
+     *         For example, "java.util" is valid but "java.util." is wrong.
      * @since 3.1
      */
     public void importPackage(String packageName) {
@@ -334,10 +333,10 @@ public class ClassPool {
      * without searching the class path at all
      * if the given name is an invalid name recorded by this method.
      * Note that searching the class path takes relatively long time.
-     * <p/>
+     *
      * <p>The current implementation of this method performs nothing.
      *
-     * @param name an invalid class name (separeted by dots).
+     * @param name          an invalid class name (separeted by dots).
      * @deprecated
      */
     public void recordInvalidClassName(String name) {
@@ -348,27 +347,27 @@ public class ClassPool {
      * Records the <code>$cflow</code> variable for the field specified
      * by <code>cname</code> and <code>fname</code>.
      *
-     * @param name  variable name
-     * @param cname class name
-     * @param fname field name
+     * @param name      variable name
+     * @param cname     class name
+     * @param fname     field name
      */
     void recordCflow(String name, String cname, String fname) {
         if (cflow == null)
             cflow = new Hashtable();
 
-        cflow.put(name, new Object[]{cname, fname});
+        cflow.put(name, new Object[] { cname, fname });
     }
 
     /**
      * Undocumented method.  Do not use; internal-use only.
      *
-     * @param name the name of <code>$cflow</code> variable
+     * @param name      the name of <code>$cflow</code> variable
      */
     public Object[] lookupCflow(String name) {
         if (cflow == null)
             cflow = new Hashtable();
 
-        return (Object[]) cflow.get(name);
+        return (Object[])cflow.get(name);
     }
 
     /**
@@ -376,30 +375,31 @@ public class ClassPool {
      * object with a new name.
      * This method is useful if you want to generate a new class as a copy
      * of another class (except the class name).  For example,
-     * <p/>
-     * <ul><pre>
+     *
+     * <pre>
      * getAndRename("Point", "Pair")
-     * </pre></ul>
-     * <p/>
+     * </pre>
+     *
      * returns a <code>CtClass</code> object representing <code>Pair</code>
      * class.  The definition of <code>Pair</code> is the same as that of
      * <code>Point</code> class except the class name since <code>Pair</code>
      * is defined by reading <code>Point.class</code>.
      *
-     * @param orgName the original (fully-qualified) class name
-     * @param newName the new class name
+     * @param orgName   the original (fully-qualified) class name
+     * @param newName   the new class name
      */
     public CtClass getAndRename(String orgName, String newName)
-            throws org.hotswap.agent.javassist.NotFoundException {
+        throws NotFoundException
+    {
         CtClass clazz = get0(orgName, false);
         if (clazz == null)
-            throw new org.hotswap.agent.javassist.NotFoundException(orgName);
+            throw new NotFoundException(orgName);
 
-        if (clazz instanceof org.hotswap.agent.javassist.CtClassType)
-            ((org.hotswap.agent.javassist.CtClassType) clazz).setClassPool(this);
+        if (clazz instanceof CtClassType)
+            ((CtClassType)clazz).setClassPool(this);
 
         clazz.setName(newName);         // indirectly calls
-        // classNameChanged() in this class
+                                        // classNameChanged() in this class
         return clazz;
     }
 
@@ -409,7 +409,7 @@ public class ClassPool {
      * name.  Don't delegate to the parent.
      */
     synchronized void classNameChanged(String oldname, CtClass clazz) {
-        CtClass c = (CtClass) getCached(oldname);
+        CtClass c = (CtClass)getCached(oldname);
         if (c == clazz)             // must check this equation.
             removeCached(oldname);  // see getAndRename().
 
@@ -425,16 +425,16 @@ public class ClassPool {
      * already read, this method returns a reference to the
      * <code>CtClass</code> created when that class file was read at the
      * first time.
-     * <p/>
+     *
      * <p>If <code>classname</code> ends with "[]", then this method
      * returns a <code>CtClass</code> object for that array type.
-     * <p/>
+     *
      * <p>To obtain an inner class, use "$" instead of "." for separating
      * the enclosing class name and the inner class name.
      *
-     * @param classname a fully-qualified class name.
+     * @param classname         a fully-qualified class name.
      */
-    public CtClass get(String classname) throws org.hotswap.agent.javassist.NotFoundException {
+    public CtClass get(String classname) throws NotFoundException {
         CtClass clazz;
         if (classname == null)
             clazz = null;
@@ -442,7 +442,7 @@ public class ClassPool {
             clazz = get0(classname, true);
 
         if (clazz == null)
-            throw new org.hotswap.agent.javassist.NotFoundException(classname);
+            throw new NotFoundException(classname);
         else {
             clazz.incGetCounter();
             return clazz;
@@ -457,7 +457,7 @@ public class ClassPool {
      * that it returns <code>null</code> when a class file is
      * not found and it never throws an exception.
      *
-     * @param classname a fully-qualified class name.
+     * @param classname     a fully-qualified class name.
      * @return a <code>CtClass</code> object or <code>null</code>.
      * @see #get(String)
      * @see #find(String)
@@ -474,8 +474,8 @@ public class ClassPool {
                    may throw an exception.
                 */
                 clazz = get0(classname, true);
-            } catch (org.hotswap.agent.javassist.NotFoundException e) {
             }
+            catch (NotFoundException e){}
 
         if (clazz != null)
             clazz.incGetCounter();
@@ -488,7 +488,7 @@ public class ClassPool {
      * This is almost equivalent to <code>get(String)</code> except
      * that classname can be an array-type "descriptor" (an encoded
      * type name) such as <code>[Ljava/lang/Object;</code>.
-     * <p/>
+     *
      * <p>Using this method is not recommended; this method should be
      * used only to obtain the <code>CtClass</code> object
      * with a name returned from <code>getClassInfo</code> in
@@ -496,14 +496,14 @@ public class ClassPool {
      * returns a fully-qualified class name but, if the class is an array
      * type, it returns a descriptor.
      *
-     * @param classname a fully-qualified class name or a descriptor
-     *                  representing an array type.
+     * @param classname         a fully-qualified class name or a descriptor
+     *                          representing an array type.
      * @see #get(String)
-     * @see org.hotswap.agent.javassist.bytecode.ConstPool#getClassInfo(int)
-     * @see org.hotswap.agent.javassist.bytecode.Descriptor#toCtClass(String, ClassPool)
+     * @see javassist.bytecode.ConstPool#getClassInfo(int)
+     * @see javassist.bytecode.Descriptor#toCtClass(String, ClassPool)
      * @since 3.8.1
      */
-    public CtClass getCtClass(String classname) throws org.hotswap.agent.javassist.NotFoundException {
+    public CtClass getCtClass(String classname) throws NotFoundException {
         if (classname.charAt(0) == '[')
             return Descriptor.toCtClass(classname, this);
         else
@@ -511,12 +511,12 @@ public class ClassPool {
     }
 
     /**
-     * @param useCache     false if the cached CtClass must be ignored.
-     * @param searchParent false if the parent class pool is not searched.
+     * @param useCache      false if the cached CtClass must be ignored.
      * @return null     if the class could not be found.
      */
     protected synchronized CtClass get0(String classname, boolean useCache)
-            throws org.hotswap.agent.javassist.NotFoundException {
+        throws NotFoundException
+    {
         CtClass clazz = null;
         if (useCache) {
             clazz = getCached(classname);
@@ -553,7 +553,7 @@ public class ClassPool {
      * @return null if the class file could not be found.
      */
     protected CtClass createCtClass(String classname, boolean useCache) {
-        // accept "[L<class name>;" as a class name. 
+        // accept "[L<class name>;" as a class name.
         if (classname.charAt(0) == '[')
             classname = Descriptor.toClassName(classname);
 
@@ -562,11 +562,13 @@ public class ClassPool {
             if ((!useCache || getCached(base) == null) && find(base) == null)
                 return null;
             else
-                return new org.hotswap.agent.javassist.CtArray(classname, this);
-        } else if (find(classname) == null)
-            return null;
+                return new CtArray(classname, this);
+        }
         else
-            return new org.hotswap.agent.javassist.CtClassType(classname, this);
+            if (find(classname) == null)
+                return null;
+            else
+                return new CtClassType(classname, this);
     }
 
     /**
@@ -574,7 +576,7 @@ public class ClassPool {
      * specified by classname.  It is also used to determine whether
      * the class file exists.
      *
-     * @param classname a fully-qualified class name.
+     * @param classname     a fully-qualified class name.
      * @return null if the class file could not be found.
      * @see CtClass#getURL()
      */
@@ -596,15 +598,17 @@ public class ClassPool {
             if (!childFirstLookup && parent != null) {
                 try {
                     clazz = parent.get0(classname, true);
-                } catch (org.hotswap.agent.javassist.NotFoundException e) {
                 }
+                catch (NotFoundException e) {}
                 if (clazz != null)
                     throw new RuntimeException(classname
                             + " is in a parent ClassPool.  Use the parent.");
             }
-        } else if (clazz.isFrozen())
-            throw new RuntimeException(classname
-                    + ": frozen class (cannot edit)");
+        }
+        else
+            if (clazz.isFrozen())
+                throw new RuntimeException(classname
+                                        + ": frozen class (cannot edit)");
     }
 
     /*
@@ -619,8 +623,8 @@ public class ClassPool {
             if (!childFirstLookup && parent != null) {
                 try {
                     clazz = parent.get0(classname, true);
-                } catch (org.hotswap.agent.javassist.NotFoundException e) {
                 }
+                catch (NotFoundException e) {}
             }
 
         return clazz;
@@ -628,12 +632,13 @@ public class ClassPool {
 
     /* for CtClassType.getClassFile2().  Don't delegate to the parent.
      */
-    InputStream openClassfile(String classname) throws org.hotswap.agent.javassist.NotFoundException {
+    InputStream openClassfile(String classname) throws NotFoundException {
         return source.openClassfile(classname);
     }
 
     void writeClassfile(String classname, OutputStream out)
-            throws org.hotswap.agent.javassist.NotFoundException, IOException, org.hotswap.agent.javassist.CannotCompileException {
+        throws NotFoundException, IOException, CannotCompileException
+    {
         source.writeClassfile(classname, out);
     }
 
@@ -641,14 +646,14 @@ public class ClassPool {
      * Reads class files from the source and returns an array of
      * <code>CtClass</code>
      * objects representing those class files.
-     * <p/>
+     *
      * <p>If an element of <code>classnames</code> ends with "[]",
      * then this method
      * returns a <code>CtClass</code> object for that array type.
      *
-     * @param classnames an array of fully-qualified class name.
+     * @param classnames        an array of fully-qualified class name.
      */
-    public CtClass[] get(String[] classnames) throws org.hotswap.agent.javassist.NotFoundException {
+    public CtClass[] get(String[] classnames) throws NotFoundException {
         if (classnames == null)
             return new CtClass[0];
 
@@ -663,12 +668,13 @@ public class ClassPool {
     /**
      * Reads a class file and obtains a compile-time method.
      *
-     * @param classname  the class name
-     * @param methodname the method name
+     * @param classname         the class name
+     * @param methodname        the method name
      * @see CtClass#getDeclaredMethod(String)
      */
-    public org.hotswap.agent.javassist.CtMethod getMethod(String classname, String methodname)
-            throws org.hotswap.agent.javassist.NotFoundException {
+    public CtMethod getMethod(String classname, String methodname)
+        throws NotFoundException
+    {
         CtClass c = get(classname);
         return c.getDeclaredMethod(methodname);
     }
@@ -677,7 +683,7 @@ public class ClassPool {
      * Creates a new class (or interface) from the given class file.
      * If there already exists a class with the same name, the new class
      * overwrites that previous class.
-     * <p/>
+     *
      * <p>This method is used for creating a <code>CtClass</code> object
      * directly from a class file.  The qualified class name is obtained
      * from the class file; you do not have to explicitly give the name.
@@ -686,10 +692,11 @@ public class ClassPool {
      * @throws RuntimeException if there is a frozen class with the
      *                          the same name.
      * @see #makeClassIfNew(InputStream)
-     * @see ByteArrayClassPath
+     * @see javassist.ByteArrayClassPath
      */
     public CtClass makeClass(InputStream classfile)
-            throws IOException, RuntimeException {
+        throws IOException, RuntimeException
+    {
         return makeClass(classfile, true);
     }
 
@@ -697,21 +704,70 @@ public class ClassPool {
      * Creates a new class (or interface) from the given class file.
      * If there already exists a class with the same name, the new class
      * overwrites that previous class.
-     * <p/>
+     *
      * <p>This method is used for creating a <code>CtClass</code> object
      * directly from a class file.  The qualified class name is obtained
      * from the class file; you do not have to explicitly give the name.
      *
-     * @param classfile   class file.
-     * @param ifNotFrozen throws a RuntimeException if this parameter is true
-     *                    and there is a frozen class with the same name.
-     * @see ByteArrayClassPath
+     * @param classfile class file.
+     * @param ifNotFrozen       throws a RuntimeException if this parameter is true
+     *                          and there is a frozen class with the same name.
+     * @see javassist.ByteArrayClassPath
      */
     public CtClass makeClass(InputStream classfile, boolean ifNotFrozen)
-            throws IOException, RuntimeException {
+        throws IOException, RuntimeException
+    {
         compress();
         classfile = new BufferedInputStream(classfile);
-        CtClass clazz = new org.hotswap.agent.javassist.CtClassType(classfile, this);
+        CtClass clazz = new CtClassType(classfile, this);
+        clazz.checkModify();
+        String classname = clazz.getName();
+        if (ifNotFrozen)
+            checkNotFrozen(classname);
+
+        cacheCtClass(classname, clazz, true);
+        return clazz;
+    }
+
+    /**
+     * Creates a new class (or interface) from the given class file.
+     * If there already exists a class with the same name, the new class
+     * overwrites that previous class.
+     *
+     * <p>This method is used for creating a <code>CtClass</code> object
+     * directly from a class file.  The qualified class name is obtained
+     * from the class file; you do not have to explicitly give the name.
+     *
+     * @param classfile         class file.
+     * @throws RuntimeException if there is a frozen class with the
+     *                          the same name.
+     * @since 3.20
+     */
+    public CtClass makeClass(ClassFile classfile)
+        throws RuntimeException
+    {
+        return makeClass(classfile, true);
+    }
+
+    /**
+     * Creates a new class (or interface) from the given class file.
+     * If there already exists a class with the same name, the new class
+     * overwrites that previous class.
+     *
+     * <p>This method is used for creating a <code>CtClass</code> object
+     * directly from a class file.  The qualified class name is obtained
+     * from the class file; you do not have to explicitly give the name.
+     *
+     * @param classfile     class file.
+     * @param ifNotFrozen       throws a RuntimeException if this parameter is true
+     *                          and there is a frozen class with the same name.
+     * @since 3.20
+     */
+    public CtClass makeClass(ClassFile classfile, boolean ifNotFrozen)
+        throws RuntimeException
+    {
+        compress();
+        CtClass clazz = new CtClassType(classfile, this);
         clazz.checkModify();
         String classname = clazz.getName();
         if (ifNotFrozen)
@@ -726,21 +782,22 @@ public class ClassPool {
      * If there already exists a class with the same name, this method
      * returns the existing class; a new class is never created from
      * the given class file.
-     * <p/>
+     *
      * <p>This method is used for creating a <code>CtClass</code> object
      * directly from a class file.  The qualified class name is obtained
      * from the class file; you do not have to explicitly give the name.
      *
-     * @param classfile the class file.
+     * @param classfile             the class file.
      * @see #makeClass(InputStream)
-     * @see ByteArrayClassPath
+     * @see javassist.ByteArrayClassPath
      * @since 3.9
      */
     public CtClass makeClassIfNew(InputStream classfile)
-            throws IOException, RuntimeException {
+        throws IOException, RuntimeException
+    {
         compress();
         classfile = new BufferedInputStream(classfile);
-        CtClass clazz = new org.hotswap.agent.javassist.CtClassType(classfile, this);
+        CtClass clazz = new CtClassType(classfile, this);
         clazz.checkModify();
         String classname = clazz.getName();
         CtClass found = checkNotExists(classname);
@@ -756,7 +813,7 @@ public class ClassPool {
      * Creates a new public class.
      * If there already exists a class with the same name, the new class
      * overwrites that previous class.
-     * <p/>
+     *
      * <p>If no constructor is explicitly added to the created new
      * class, Javassist generates constructors and adds it when
      * the class file is generated.  It generates a new constructor
@@ -765,8 +822,8 @@ public class ClassPool {
      * corresponding constructor of the super class.  All the received
      * parameters are passed to it.
      *
-     * @param classname a fully-qualified class name.
-     * @throws RuntimeException if the existing class is frozen.
+     * @param classname                 a fully-qualified class name.
+     * @throws RuntimeException         if the existing class is frozen.
      */
     public CtClass makeClass(String classname) throws RuntimeException {
         return makeClass(classname, null);
@@ -776,7 +833,7 @@ public class ClassPool {
      * Creates a new public class.
      * If there already exists a class/interface with the same name,
      * the new class overwrites that previous class.
-     * <p/>
+     *
      * <p>If no constructor is explicitly added to the created new
      * class, Javassist generates constructors and adds it when
      * the class file is generated.  It generates a new constructor
@@ -790,23 +847,24 @@ public class ClassPool {
      * @throws RuntimeException if the existing class is frozen.
      */
     public synchronized CtClass makeClass(String classname, CtClass superclass)
-            throws RuntimeException {
+        throws RuntimeException
+    {
         checkNotFrozen(classname);
-        CtClass clazz = new org.hotswap.agent.javassist.CtNewClass(classname, this, false, superclass);
+        CtClass clazz = new CtNewClass(classname, this, false, superclass);
         cacheCtClass(classname, clazz, true);
         return clazz;
     }
 
     /**
      * Creates a new public nested class.
-     * This method is called by CtClassType.makeNestedClass().
+     * This method is called by {@link CtClassType#makeNestedClass()}.
      *
-     * @param classname a fully-qualified class name.
-     * @return the nested class.
+     * @param classname     a fully-qualified class name.
+     * @return      the nested class.
      */
     synchronized CtClass makeNestedClass(String classname) {
         checkNotFrozen(classname);
-        CtClass clazz = new org.hotswap.agent.javassist.CtNewNestedClass(classname, this, false, null);
+        CtClass clazz = new CtNewClass(classname, this, false, null);
         cacheCtClass(classname, clazz, true);
         return clazz;
     }
@@ -816,7 +874,7 @@ public class ClassPool {
      * If there already exists a class/interface with the same name,
      * the new interface overwrites that previous one.
      *
-     * @param name a fully-qualified interface name.
+     * @param name          a fully-qualified interface name.
      * @throws RuntimeException if the existing interface is frozen.
      */
     public CtClass makeInterface(String name) throws RuntimeException {
@@ -833,11 +891,34 @@ public class ClassPool {
      * @throws RuntimeException if the existing interface is frozen.
      */
     public synchronized CtClass makeInterface(String name, CtClass superclass)
-            throws RuntimeException {
+        throws RuntimeException
+    {
         checkNotFrozen(name);
-        CtClass clazz = new org.hotswap.agent.javassist.CtNewClass(name, this, true, superclass);
+        CtClass clazz = new CtNewClass(name, this, true, superclass);
         cacheCtClass(name, clazz, true);
         return clazz;
+    }
+
+    /**
+     * Creates a new annotation.
+     * If there already exists a class/interface with the same name,
+     * the new interface overwrites that previous one.
+     *
+     * @param name      a fully-qualified interface name.
+     *                  Or null if the annotation has no super interface.
+     * @throws RuntimeException if the existing interface is frozen.
+     * @since 3.19
+     */
+    public CtClass makeAnnotation(String name) throws RuntimeException {
+        try {
+            CtClass cc = makeInterface(name, get("java.lang.annotation.Annotation"));
+            cc.setModifiers(cc.getModifiers() | Modifier.ANNOTATION);
+            return cc;
+        }
+        catch (NotFoundException e) {
+            // should never happen.
+            throw new RuntimeException(e.getMessage(), e);
+        }
     }
 
     /**
@@ -850,7 +931,7 @@ public class ClassPool {
      *
      * @return the appended class path.
      */
-    public org.hotswap.agent.javassist.ClassPath appendSystemPath() {
+    public ClassPath appendSystemPath() {
         return source.appendSystemPath();
     }
 
@@ -859,11 +940,11 @@ public class ClassPool {
      * search path.
      *
      * @return the inserted class path.
-     * @see org.hotswap.agent.javassist.ClassPath
-     * @see URLClassPath
-     * @see ByteArrayClassPath
+     * @see javassist.ClassPath
+     * @see javassist.URLClassPath
+     * @see javassist.ByteArrayClassPath
      */
-    public org.hotswap.agent.javassist.ClassPath insertClassPath(org.hotswap.agent.javassist.ClassPath cp) {
+    public ClassPath insertClassPath(ClassPath cp) {
         return source.insertClassPath(cp);
     }
 
@@ -872,11 +953,11 @@ public class ClassPool {
      * search path.
      *
      * @return the appended class path.
-     * @see org.hotswap.agent.javassist.ClassPath
-     * @see URLClassPath
-     * @see ByteArrayClassPath
+     * @see javassist.ClassPath
+     * @see javassist.URLClassPath
+     * @see javassist.ByteArrayClassPath
      */
-    public org.hotswap.agent.javassist.ClassPath appendClassPath(org.hotswap.agent.javassist.ClassPath cp) {
+    public ClassPath appendClassPath(ClassPath cp) {
         return source.appendClassPath(cp);
     }
 
@@ -884,15 +965,17 @@ public class ClassPool {
      * Inserts a directory or a jar (or zip) file at the head of the
      * search path.
      *
-     * @param pathname the path name of the directory or jar file.
-     *                 It must not end with a path separator ("/").
-     *                 If the path name ends with "/*", then all the
-     *                 jar files matching the path name are inserted.
+     * @param pathname      the path name of the directory or jar file.
+     *                      It must not end with a path separator ("/").
+     *                      If the path name ends with "/*", then all the
+     *                      jar files matching the path name are inserted.
+     *
      * @return the inserted class path.
-     * @throws org.hotswap.agent.javassist.NotFoundException if the jar file is not found.
+     * @throws NotFoundException    if the jar file is not found.
      */
-    public org.hotswap.agent.javassist.ClassPath insertClassPath(String pathname)
-            throws org.hotswap.agent.javassist.NotFoundException {
+    public ClassPath insertClassPath(String pathname)
+        throws NotFoundException
+    {
         return source.insertClassPath(pathname);
     }
 
@@ -902,13 +985,15 @@ public class ClassPool {
      *
      * @param pathname the path name of the directory or jar file.
      *                 It must not end with a path separator ("/").
-     *                 If the path name ends with "/*", then all the
-     *                 jar files matching the path name are appended.
+     *                      If the path name ends with "/*", then all the
+     *                      jar files matching the path name are appended.
+     *
      * @return the appended class path.
-     * @throws org.hotswap.agent.javassist.NotFoundException if the jar file is not found.
+     * @throws NotFoundException if the jar file is not found.
      */
-    public org.hotswap.agent.javassist.ClassPath appendClassPath(String pathname)
-            throws org.hotswap.agent.javassist.NotFoundException {
+    public ClassPath appendClassPath(String pathname)
+        throws NotFoundException
+    {
         return source.appendClassPath(pathname);
     }
 
@@ -917,31 +1002,32 @@ public class ClassPool {
      * The detached <code>ClassPath</code> object cannot be added
      * to the path again.
      */
-    public void removeClassPath(org.hotswap.agent.javassist.ClassPath cp) {
+    public void removeClassPath(ClassPath cp) {
         source.removeClassPath(cp);
     }
 
     /**
      * Appends directories and jar files for search.
-     * <p/>
+     *
      * <p>The elements of the given path list must be separated by colons
      * in Unix or semi-colons in Windows.
      *
-     * @param pathlist a (semi)colon-separated list of
-     *                 the path names of directories and jar files.
-     *                 The directory name must not end with a path
-     *                 separator ("/").
-     * @throws org.hotswap.agent.javassist.NotFoundException if a jar file is not found.
+     * @param pathlist      a (semi)colon-separated list of
+     *                      the path names of directories and jar files.
+     *                      The directory name must not end with a path
+     *                      separator ("/").
+     * @throws NotFoundException if a jar file is not found.
      */
-    public void appendPathList(String pathlist) throws org.hotswap.agent.javassist.NotFoundException {
+    public void appendPathList(String pathlist) throws NotFoundException {
         char sep = File.pathSeparatorChar;
         int i = 0;
-        for (; ; ) {
+        for (;;) {
             int j = pathlist.indexOf(sep, i);
             if (j < 0) {
                 appendClassPath(pathlist.substring(i));
                 break;
-            } else {
+            }
+            else {
                 appendClassPath(pathlist.substring(i, j));
                 i = j + 1;
             }
@@ -955,16 +1041,16 @@ public class ClassPool {
      * To load the class, this method uses the context class loader
      * of the current thread.  It is obtained by calling
      * <code>getClassLoader()</code>.
-     * <p/>
+     *
      * <p>This behavior can be changed by subclassing the pool and changing
      * the <code>getClassLoader()</code> method.
      * If the program is running on some application
      * server, the context class loader might be inappropriate to load the
      * class.
-     * <p/>
+     *
      * <p>This method is provided for convenience.  If you need more
      * complex functionality, you should write your own class loader.
-     * <p/>
+     *
      * <p><b>Warining:</b> A Class object returned by this method may not
      * work with a security manager or a signed jar file because a
      * protection domain is not specified.
@@ -972,7 +1058,7 @@ public class ClassPool {
      * @see #toClass(CtClass, java.lang.ClassLoader, ProtectionDomain)
      * @see #getClassLoader()
      */
-    public Class toClass(CtClass clazz) throws org.hotswap.agent.javassist.CannotCompileException {
+    public Class toClass(CtClass clazz) throws CannotCompileException {
         // Some subclasses of ClassPool may override toClass(CtClass,ClassLoader).
         // So we should call that method instead of toClass(.., ProtectionDomain).
         return toClass(clazz, getClassLoader());
@@ -981,7 +1067,7 @@ public class ClassPool {
     /**
      * Get the classloader for <code>toClass()</code>, <code>getAnnotations()</code> in
      * <code>CtClass</code>, etc.
-     * <p/>
+     *
      * <p>The default is the context class loader.
      *
      * @return the classloader for the pool
@@ -1004,18 +1090,19 @@ public class ClassPool {
      * Converts the class to a <code>java.lang.Class</code> object.
      * Do not override this method any more at a subclass because
      * <code>toClass(CtClass)</code> never calls this method.
-     * <p/>
+     *
      * <p><b>Warining:</b> A Class object returned by this method may not
      * work with a security manager or a signed jar file because a
      * protection domain is not specified.
      *
-     * @deprecated Replaced by {@link #toClass(CtClass, ClassLoader, ProtectionDomain)}.
+     * @deprecated      Replaced by {@link #toClass(CtClass,ClassLoader,ProtectionDomain)}.
      * A subclass of <code>ClassPool</code> that has been
      * overriding this method should be modified.  It should override
-     * {@link #toClass(CtClass, ClassLoader, ProtectionDomain)}.
+     * {@link #toClass(CtClass,ClassLoader,ProtectionDomain)}.
      */
     public Class toClass(CtClass ct, ClassLoader loader)
-            throws org.hotswap.agent.javassist.CannotCompileException {
+        throws CannotCompileException
+    {
         return toClass(ct, loader, null);
     }
 
@@ -1023,94 +1110,82 @@ public class ClassPool {
      * Converts the class to a <code>java.lang.Class</code> object.
      * Once this method is called, further modifications are not allowed
      * any more.
-     * <p/>
+     *
      * <p>The class file represented by the given <code>CtClass</code> is
      * loaded by the given class loader to construct a
      * <code>java.lang.Class</code> object.  Since a private method
      * on the class loader is invoked through the reflection API,
      * the caller must have permissions to do that.
-     * <p/>
+     *
      * <p>An easy way to obtain <code>ProtectionDomain</code> object is
      * to call <code>getProtectionDomain()</code>
      * in <code>java.lang.Class</code>.  It returns the domain that the
      * class belongs to.
-     * <p/>
+     *
      * <p>This method is provided for convenience.  If you need more
      * complex functionality, you should write your own class loader.
      *
-     * @param loader the class loader used to load this class.
-     *               For example, the loader returned by
-     *               <code>getClassLoader()</code> can be used
-     *               for this parameter.
-     * @param domain the protection domain for the class.
-     *               If it is null, the default domain created
-     *               by <code>java.lang.ClassLoader</code> is used.
+     * @param loader        the class loader used to load this class.
+     *                      For example, the loader returned by
+     *                      <code>getClassLoader()</code> can be used
+     *                      for this parameter.
+     * @param domain        the protection domain for the class.
+     *                      If it is null, the default domain created
+     *                      by <code>java.lang.ClassLoader</code> is used.
+     *
      * @see #getClassLoader()
      * @since 3.3
      */
     public Class toClass(CtClass ct, ClassLoader loader, ProtectionDomain domain)
-            throws org.hotswap.agent.javassist.CannotCompileException {
+        throws CannotCompileException
+    {
         try {
-            byte[] b = ct.toBytecode();
-            java.lang.reflect.Method method;
-            Object[] args;
-            if (domain == null) {
-                method = defineClass1;
-                args = new Object[]{ct.getName(), b, new Integer(0),
-                        new Integer(b.length)};
-            } else {
-                method = defineClass2;
-                args = new Object[]{ct.getName(), b, new Integer(0),
-                        new Integer(b.length), domain};
-            }
-
-            return (Class) toClass2(method, loader, args);
-        } catch (RuntimeException e) {
-            throw e;
-        } catch (java.lang.reflect.InvocationTargetException e) {
-            throw new org.hotswap.agent.javassist.CannotCompileException(e.getTargetException());
-        } catch (Exception e) {
-            throw new org.hotswap.agent.javassist.CannotCompileException(e);
+            return org.hotswap.agent.javassist.util.proxy.DefineClassHelper.toClass(ct.getName(),
+                    loader, domain, ct.toBytecode());
         }
-    }
-
-    private static synchronized Object toClass2(Method method,
-                                                ClassLoader loader, Object[] args)
-            throws Exception {
-        method.setAccessible(true);
-        try {
-            return method.invoke(loader, args);
-        } finally {
-            method.setAccessible(false);
+        catch (IOException e) {
+            throw new CannotCompileException(e);
         }
     }
 
     /**
      * Defines a new package.  If the package is already defined, this method
      * performs nothing.
-     * <p/>
+     *
      * <p>You do not necessarily need to
      * call this method.  If this method is called, then
      * <code>getPackage()</code> on the <code>Class</code> object returned
-     * by <code>toClass()</code> will return a non-null object.
+     * by <code>toClass()</code> will return a non-null object.</p>
      *
-     * @param loader the class loader passed to <code>toClass()</code> or
-     *               the default one obtained by <code>getClassLoader()</code>.
-     * @param name   the package name.
+     * <p>The jigsaw module introduced by Java 9 has broken this method.
+     * In Java 9 or later, the VM argument
+     * <code>--add-opens java.base/java.lang=ALL-UNNAMED</code>
+     * has to be given to the JVM so that this method can run.
+     * </p>
+     *
+     * @param loader        the class loader passed to <code>toClass()</code> or
+     *                      the default one obtained by <code>getClassLoader()</code>.
+     * @param name          the package name.
      * @see #getClassLoader()
      * @see #toClass(CtClass)
      * @see CtClass#toClass()
      * @since 3.16
+     * @deprecated
      */
     public void makePackage(ClassLoader loader, String name)
-            throws org.hotswap.agent.javassist.CannotCompileException {
-        Object[] args = new Object[]{
-                name, null, null, null, null, null, null, null};
+        throws CannotCompileException
+    {
+        if (definePackage == null)
+            throw new CannotCompileException("give the JVM --add-opens");
+
+        Object[] args = new Object[] {
+                name, null, null, null, null, null, null, null };
         Throwable t;
         try {
-            toClass2(definePackage, loader, args);
+            makePackage2(definePackage, loader, args);
             return;
-        } catch (java.lang.reflect.InvocationTargetException e) {
+        }
+        catch (java.lang.reflect.InvocationTargetException e) {
             t = e.getTargetException();
             if (t == null)
                 t = e;
@@ -1119,10 +1194,24 @@ public class ClassPool {
                 // is thrown.
                 return;
             }
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
             t = e;
         }
 
-        throw new org.hotswap.agent.javassist.CannotCompileException(t);
+        throw new CannotCompileException(t);
+    }
+
+    private static synchronized Object makePackage2(Method method,
+            ClassLoader loader, Object[] args)
+        throws Exception
+    {
+        method.setAccessible(true);
+        try {
+            return method.invoke(loader, args);
+        }
+        finally {
+            method.setAccessible(false);
+        }
     }
 }
