@@ -16,17 +16,21 @@
 
 package org.hotswap.agent.javassist.bytecode.annotation;
 
-import org.hotswap.agent.javassist.bytecode.AnnotationDefaultAttribute;
-import org.hotswap.agent.javassist.bytecode.ClassFile;
-
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 
+import org.hotswap.agent.javassist.ClassPool;
+import org.hotswap.agent.javassist.CtClass;
+import org.hotswap.agent.javassist.NotFoundException;
+import org.hotswap.agent.javassist.bytecode.AnnotationDefaultAttribute;
+import org.hotswap.agent.javassist.bytecode.ClassFile;
+import org.hotswap.agent.javassist.bytecode.MethodInfo;
+
 /**
  * Internal-use only.  This is a helper class internally used for implementing
  * <code>toAnnotationType()</code> in <code>Annotation</code>.
- *
+ *   
  * @author Shigeru Chiba
  * @author <a href="mailto:bill@jboss.org">Bill Burke</a>
  * @author <a href="mailto:adrian@jboss.org">Adrian Brock</a>
@@ -34,9 +38,9 @@ import java.lang.reflect.Proxy;
 public class AnnotationImpl implements InvocationHandler {
     private static final String JDK_ANNOTATION_CLASS_NAME = "java.lang.annotation.Annotation";
     private static Method JDK_ANNOTATION_TYPE_METHOD = null;
-
+   
     private Annotation annotation;
-    private org.hotswap.agent.javassist.ClassPool pool;
+    private ClassPool pool;
     private ClassLoader classLoader;
     private transient Class annotationType;
     private transient int cachedHashCode = Integer.MIN_VALUE;
@@ -45,29 +49,32 @@ public class AnnotationImpl implements InvocationHandler {
         // Try to resolve the JDK annotation type method
         try {
             Class clazz = Class.forName(JDK_ANNOTATION_CLASS_NAME);
-            JDK_ANNOTATION_TYPE_METHOD = clazz.getMethod("annotationType", (Class[]) null);
-        } catch (Exception ignored) {
+            JDK_ANNOTATION_TYPE_METHOD = clazz.getMethod("annotationType", (Class[])null);
+        }
+        catch (Exception ignored) {
             // Probably not JDK5+
         }
     }
-
+    
     /**
      * Constructs an annotation object.
      *
-     * @param cl    class loader for obtaining annotation types.
-     * @param clazz the annotation type.
-     * @param cp    class pool for containing an annotation
-     *              type (or null).
-     * @param anon  the annotation.
+     * @param cl        class loader for obtaining annotation types.
+     * @param clazz     the annotation type.
+     * @param cp        class pool for containing an annotation
+     *                  type (or null).
+     * @param anon      the annotation.
      * @return the annotation
      */
-    public static Object make(ClassLoader cl, Class clazz, org.hotswap.agent.javassist.ClassPool cp,
-                              Annotation anon) {
+    public static Object make(ClassLoader cl, Class clazz, ClassPool cp,
+                              Annotation anon)
+        throws IllegalArgumentException
+    {
         AnnotationImpl handler = new AnnotationImpl(anon, cp, cl);
-        return Proxy.newProxyInstance(cl, new Class[]{clazz}, handler);
+        return Proxy.newProxyInstance(cl, new Class[] { clazz }, handler);
     }
-
-    private AnnotationImpl(Annotation a, org.hotswap.agent.javassist.ClassPool cp, ClassLoader loader) {
+    
+    private AnnotationImpl(Annotation a, ClassPool cp, ClassLoader loader) {
         annotation = a;
         pool = cp;
         classLoader = loader;
@@ -75,7 +82,7 @@ public class AnnotationImpl implements InvocationHandler {
 
     /**
      * Obtains the name of the annotation type.
-     *
+     * 
      * @return the type name
      */
     public String getTypeName() {
@@ -84,7 +91,7 @@ public class AnnotationImpl implements InvocationHandler {
 
     /**
      * Get the annotation type
-     *
+     * 
      * @return the annotation class
      * @throws NoClassDefFoundError when the class could not loaded
      */
@@ -93,7 +100,8 @@ public class AnnotationImpl implements InvocationHandler {
             String typeName = annotation.getTypeName();
             try {
                 annotationType = classLoader.loadClass(typeName);
-            } catch (ClassNotFoundException e) {
+            }
+            catch (ClassNotFoundException e) {
                 NoClassDefFoundError error = new NoClassDefFoundError("Error loading annotation class: " + typeName);
                 error.setStackTrace(e.getStackTrace());
                 throw error;
@@ -101,10 +109,10 @@ public class AnnotationImpl implements InvocationHandler {
         }
         return annotationType;
     }
-
+    
     /**
      * Obtains the internal data structure representing the annotation.
-     *
+     * 
      * @return the annotation
      */
     public Annotation getAnnotation() {
@@ -119,19 +127,22 @@ public class AnnotationImpl implements InvocationHandler {
      * is also available on the proxy instance.
      */
     public Object invoke(Object proxy, Method method, Object[] args)
-            throws Throwable {
+        throws Throwable
+    {
         String name = method.getName();
         if (Object.class == method.getDeclaringClass()) {
             if ("equals".equals(name)) {
                 Object obj = args[0];
-                return new Boolean(checkEquals(obj));
-            } else if ("toString".equals(name))
+                return Boolean.valueOf(checkEquals(obj));
+            }
+            else if ("toString".equals(name))
                 return annotation.toString();
             else if ("hashCode".equals(name))
-                return new Integer(hashCode());
-        } else if ("annotationType".equals(name)
-                && method.getParameterTypes().length == 0)
-            return getAnnotationType();
+                return Integer.valueOf(hashCode());
+        }
+        else if ("annotationType".equals(name)
+                 && method.getParameterTypes().length == 0)
+           return getAnnotationType();
 
         MemberValue mv = annotation.getMemberValue(name);
         if (mv == null)
@@ -139,32 +150,34 @@ public class AnnotationImpl implements InvocationHandler {
         else
             return mv.getValue(classLoader, pool, method);
     }
-
+    
     private Object getDefault(String name, Method method)
-            throws ClassNotFoundException, RuntimeException {
+        throws ClassNotFoundException, RuntimeException
+    {
         String classname = annotation.getTypeName();
         if (pool != null) {
             try {
-                org.hotswap.agent.javassist.CtClass cc = pool.get(classname);
+                CtClass cc = pool.get(classname);
                 ClassFile cf = cc.getClassFile2();
-                org.hotswap.agent.javassist.bytecode.MethodInfo minfo = cf.getMethod(name);
+                MethodInfo minfo = cf.getMethod(name);
                 if (minfo != null) {
                     AnnotationDefaultAttribute ainfo
-                            = (AnnotationDefaultAttribute)
-                            minfo.getAttribute(AnnotationDefaultAttribute.tag);
+                        = (AnnotationDefaultAttribute)
+                          minfo.getAttribute(AnnotationDefaultAttribute.tag);
                     if (ainfo != null) {
                         MemberValue mv = ainfo.getDefaultValue();
                         return mv.getValue(classLoader, pool, method);
                     }
                 }
-            } catch (org.hotswap.agent.javassist.NotFoundException e) {
+            }
+            catch (NotFoundException e) {
                 throw new RuntimeException("cannot find a class file: "
-                        + classname);
+                                           + classname);
             }
         }
 
         throw new RuntimeException("no default value: " + classname + "."
-                + name + "()");
+                                   + name + "()");
     }
 
     /**
@@ -178,7 +191,7 @@ public class AnnotationImpl implements InvocationHandler {
             getAnnotationType();
 
             Method[] methods = annotationType.getDeclaredMethods();
-            for (int i = 0; i < methods.length; ++i) {
+            for (int i = 0; i < methods.length; ++ i) {
                 String name = methods[i].getName();
                 int valueHashCode = 0;
 
@@ -186,13 +199,15 @@ public class AnnotationImpl implements InvocationHandler {
                 MemberValue mv = annotation.getMemberValue(name);
                 Object value = null;
                 try {
-                    if (mv != null)
-                        value = mv.getValue(classLoader, pool, methods[i]);
-                    if (value == null)
-                        value = getDefault(name, methods[i]);
-                } catch (RuntimeException e) {
+                   if (mv != null)
+                       value = mv.getValue(classLoader, pool, methods[i]);
+                   if (value == null)
+                       value = getDefault(name, methods[i]);
+                }
+                catch (RuntimeException e) {
                     throw e;
-                } catch (Exception e) {
+                }
+                catch (Exception e) {
                     throw new RuntimeException("Error retrieving value " + name + " for annotation " + annotation.getTypeName(), e);
                 }
 
@@ -202,18 +217,18 @@ public class AnnotationImpl implements InvocationHandler {
                         valueHashCode = arrayHashCode(value);
                     else
                         valueHashCode = value.hashCode();
-                }
+                } 
                 hashCode += 127 * name.hashCode() ^ valueHashCode;
             }
-
+          
             cachedHashCode = hashCode;
         }
         return cachedHashCode;
     }
-
+    
     /**
      * Check that another annotation equals ourselves.
-     *
+     * 
      * @param obj the other annotation
      * @return the true when equals false otherwise
      * @throws Exception for any problem
@@ -231,12 +246,12 @@ public class AnnotationImpl implements InvocationHandler {
             }
         }
 
-        Class otherAnnotationType = (Class) JDK_ANNOTATION_TYPE_METHOD.invoke(obj, (Object[]) null);
+        Class otherAnnotationType = (Class) JDK_ANNOTATION_TYPE_METHOD.invoke(obj, (Object[])null);
         if (getAnnotationType().equals(otherAnnotationType) == false)
-            return false;
-
+           return false;
+        
         Method[] methods = annotationType.getDeclaredMethods();
-        for (int i = 0; i < methods.length; ++i) {
+        for (int i = 0; i < methods.length; ++ i) {
             String name = methods[i].getName();
 
             // Get the value
@@ -244,14 +259,16 @@ public class AnnotationImpl implements InvocationHandler {
             Object value = null;
             Object otherValue = null;
             try {
-                if (mv != null)
-                    value = mv.getValue(classLoader, pool, methods[i]);
-                if (value == null)
-                    value = getDefault(name, methods[i]);
-                otherValue = methods[i].invoke(obj, (Object[]) null);
-            } catch (RuntimeException e) {
+               if (mv != null)
+                   value = mv.getValue(classLoader, pool, methods[i]);
+               if (value == null)
+                   value = getDefault(name, methods[i]);
+               otherValue = methods[i].invoke(obj, (Object[])null);
+            }
+            catch (RuntimeException e) {
                 throw e;
-            } catch (Exception e) {
+            }
+            catch (Exception e) {
                 throw new RuntimeException("Error retrieving value " + name + " for annotation " + annotation.getTypeName(), e);
             }
 
@@ -260,30 +277,31 @@ public class AnnotationImpl implements InvocationHandler {
             if (value != null && value.equals(otherValue) == false)
                 return false;
         }
-
+        
         return true;
     }
 
     /**
      * Calculates the hashCode of an array using the same
      * algorithm as java.util.Arrays.hashCode()
-     *
+     * 
      * @param object the object
      * @return the hashCode
      */
-    private static int arrayHashCode(Object object) {
-        if (object == null)
-            return 0;
+    private static int arrayHashCode(Object object)
+    {
+       if (object == null)
+          return 0;
 
-        int result = 1;
-
-        Object[] array = (Object[]) object;
-        for (int i = 0; i < array.length; ++i) {
-            int elementHashCode = 0;
-            if (array[i] != null)
-                elementHashCode = array[i].hashCode();
-            result = 31 * result + elementHashCode;
-        }
-        return result;
+       int result = 1;
+       
+       Object[] array = (Object[]) object;
+       for (int i = 0; i < array.length; ++i) {
+           int elementHashCode = 0;
+           if (array[i] != null)
+              elementHashCode = array[i].hashCode();
+           result = 31 * result + elementHashCode;
+       }
+       return result;
     }
 }
