@@ -18,22 +18,24 @@ package org.hotswap.agent.javassist.compiler;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import org.hotswap.agent.javassist.compiler.ast.*;
+import org.hotswap.agent.javassist.bytecode.*;
 
 /* The code generator is implemeted by three files:
  * CodeGen.java, MemberCodeGen.java, and JvstCodeGen.
  * I just wanted to split a big file into three smaller ones.
  */
 
-public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.Visitor implements org.hotswap.agent.javassist.bytecode.Opcode, TokenId {
+public abstract class CodeGen extends Visitor implements Opcode, TokenId {
     static final String javaLangObject = "java.lang.Object";
     static final String jvmJavaLangObject = "java/lang/Object";
 
     static final String javaLangString = "java.lang.String";
     static final String jvmJavaLangString = "java/lang/String";
 
-    protected org.hotswap.agent.javassist.bytecode.Bytecode bytecode;
+    protected Bytecode bytecode;
     private int tempVar;
-    org.hotswap.agent.javassist.compiler.TypeChecker typeChecker;
+    TypeChecker typeChecker;
 
     /**
      * true if the last visited node is a return statement.
@@ -55,9 +57,9 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
         /**
          * Returns true if the generated code ends with return,
-         * throw, or goto.
+         * throw, or goto. 
          */
-        protected abstract boolean doit(org.hotswap.agent.javassist.bytecode.Bytecode b, int opcode);
+        protected abstract boolean doit(Bytecode b, int opcode);
 
         protected ReturnHook(CodeGen gen) {
             next = gen.returnHooks;
@@ -78,7 +80,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
     protected int arrayDim;
     protected String className; // JVM-internal representation
 
-    public CodeGen(org.hotswap.agent.javassist.bytecode.Bytecode b) {
+    public CodeGen(Bytecode b) {
         bytecode = b;
         tempVar = -1;
         typeChecker = null;
@@ -89,21 +91,19 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         returnHooks = null;
     }
 
-    public void setTypeChecker(org.hotswap.agent.javassist.compiler.TypeChecker checker) {
+    public void setTypeChecker(TypeChecker checker) {
         typeChecker = checker;
     }
 
-    protected static void fatal() throws org.hotswap.agent.javassist.compiler.CompileError {
-        throw new org.hotswap.agent.javassist.compiler.CompileError("fatal");
+    protected static void fatal() throws CompileError {
+        throw new CompileError("fatal");
     }
 
     public static boolean is2word(int type, int dim) {
-        return dim == 0 && (type == DOUBLE || type == LONG);
+        return dim == 0 && (type == DOUBLE || type == LONG); 
     }
 
-    public int getMaxLocals() {
-        return bytecode.getMaxLocals();
-    }
+    public int getMaxLocals() { return bytecode.getMaxLocals(); }
 
     public void setMaxLocals(int n) {
         bytecode.setMaxLocals(n);
@@ -126,7 +126,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return tempVar;
     }
 
-    protected int getLocalVar(org.hotswap.agent.javassist.compiler.ast.Declarator d) {
+    protected int getLocalVar(Declarator d) {
         int v = d.getLocalVar();
         if (v < 0) {
             v = getMaxLocals(); // delayed variable allocation.
@@ -145,25 +145,25 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
     /**
      * Returns the JVM-internal representation of this super class name.
      */
-    protected abstract String getSuperName() throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract String getSuperName() throws CompileError;
 
     /* Converts a class name into a JVM-internal representation.
      *
      * It may also expand a simple class name to java.lang.*.
      * For example, this converts Object into java/lang/Object.
      */
-    protected abstract String resolveClassName(org.hotswap.agent.javassist.compiler.ast.ASTList name)
-            throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract String resolveClassName(ASTList name)
+        throws CompileError;
 
     /* Expands a simple class name to java.lang.*.
      * For example, this converts Object into java/lang/Object.
      */
     protected abstract String resolveClassName(String jvmClassName)
-            throws org.hotswap.agent.javassist.compiler.CompileError;
+        throws CompileError;
 
     /**
-     * @param name the JVM-internal representation.
-     *             name is not exapnded to java.lang.*.
+     * @param name      the JVM-internal representation.
+     *                  name is not exapnded to java.lang.*.
      */
     protected static String toJvmArrayName(String name, int dim) {
         if (name == null)
@@ -187,105 +187,101 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
     protected static String toJvmTypeName(int type, int dim) {
         char c = 'I';
-        switch (type) {
-            case BOOLEAN:
-                c = 'Z';
-                break;
-            case BYTE:
-                c = 'B';
-                break;
-            case CHAR:
-                c = 'C';
-                break;
-            case SHORT:
-                c = 'S';
-                break;
-            case INT:
-                c = 'I';
-                break;
-            case LONG:
-                c = 'J';
-                break;
-            case FLOAT:
-                c = 'F';
-                break;
-            case DOUBLE:
-                c = 'D';
-                break;
-            case VOID:
-                c = 'V';
-                break;
+        switch(type) {
+        case BOOLEAN :
+            c = 'Z';
+            break;
+        case BYTE :
+            c = 'B';
+            break;
+        case CHAR :
+            c = 'C';
+            break;
+        case SHORT :
+            c = 'S';
+            break;
+        case INT :
+            c = 'I';
+            break;
+        case LONG :
+            c = 'J';
+            break;
+        case FLOAT :
+            c = 'F';
+            break;
+        case DOUBLE :
+            c = 'D';
+            break;
+        case VOID :
+            c = 'V';
+            break;
         }
 
         StringBuffer sbuf = new StringBuffer();
         while (dim-- > 0)
-            sbuf.append('[');
+                sbuf.append('[');
 
         sbuf.append(c);
         return sbuf.toString();
     }
 
-    public void compileExpr(org.hotswap.agent.javassist.compiler.ast.ASTree expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void compileExpr(ASTree expr) throws CompileError {
         doTypeCheck(expr);
         expr.accept(this);
     }
 
-    public boolean compileBooleanExpr(boolean branchIf, org.hotswap.agent.javassist.compiler.ast.ASTree expr)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    public boolean compileBooleanExpr(boolean branchIf, ASTree expr)
+        throws CompileError
+    {
         doTypeCheck(expr);
         return booleanExpr(branchIf, expr);
     }
 
-    public void doTypeCheck(org.hotswap.agent.javassist.compiler.ast.ASTree expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void doTypeCheck(ASTree expr) throws CompileError {
         if (typeChecker != null)
             expr.accept(typeChecker);
     }
 
-    public void atASTList(org.hotswap.agent.javassist.compiler.ast.ASTList n) throws org.hotswap.agent.javassist.compiler.CompileError {
-        fatal();
-    }
+    public void atASTList(ASTList n) throws CompileError { fatal(); }
+    
+    public void atPair(Pair n) throws CompileError { fatal(); }
 
-    public void atPair(org.hotswap.agent.javassist.compiler.ast.Pair n) throws org.hotswap.agent.javassist.compiler.CompileError {
-        fatal();
-    }
+    public void atSymbol(Symbol n) throws CompileError { fatal(); }
 
-    public void atSymbol(org.hotswap.agent.javassist.compiler.ast.Symbol n) throws org.hotswap.agent.javassist.compiler.CompileError {
-        fatal();
-    }
-
-    public void atFieldDecl(org.hotswap.agent.javassist.compiler.ast.FieldDecl field) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atFieldDecl(FieldDecl field) throws CompileError {
         field.getInit().accept(this);
     }
 
-    public void atMethodDecl(org.hotswap.agent.javassist.compiler.ast.MethodDecl method) throws org.hotswap.agent.javassist.compiler.CompileError {
-        org.hotswap.agent.javassist.compiler.ast.ASTList mods = method.getModifiers();
+    public void atMethodDecl(MethodDecl method) throws CompileError {
+        ASTList mods = method.getModifiers();
         setMaxLocals(1);
         while (mods != null) {
-            org.hotswap.agent.javassist.compiler.ast.Keyword k = (org.hotswap.agent.javassist.compiler.ast.Keyword) mods.head();
+            Keyword k = (Keyword)mods.head();
             mods = mods.tail();
             if (k.get() == STATIC) {
                 setMaxLocals(0);
                 inStaticMethod = true;
             }
         }
-
-        org.hotswap.agent.javassist.compiler.ast.ASTList params = method.getParams();
+            
+        ASTList params = method.getParams();
         while (params != null) {
-            atDeclarator((org.hotswap.agent.javassist.compiler.ast.Declarator) params.head());
+            atDeclarator((Declarator)params.head());
             params = params.tail();
         }
 
-        org.hotswap.agent.javassist.compiler.ast.Stmnt s = method.getBody();
+        Stmnt s = method.getBody();
         atMethodBody(s, method.isConstructor(),
-                method.getReturn().getType() == VOID);
+                     method.getReturn().getType() == VOID);
     }
 
     /**
-     * @param isCons true if super() must be called.
-     *               false if the method is a class initializer.
+     * @param isCons	true if super() must be called.
+     *			false if the method is a class initializer.
      */
-    public void atMethodBody(org.hotswap.agent.javassist.compiler.ast.Stmnt s, boolean isCons, boolean isVoid)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atMethodBody(Stmnt s, boolean isCons, boolean isVoid)
+        throws CompileError
+    {
         if (s == null)
             return;
 
@@ -296,23 +292,24 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         s.accept(this);
         if (!hasReturned)
             if (isVoid) {
-                bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.RETURN);
+                bytecode.addOpcode(Opcode.RETURN);
                 hasReturned = true;
-            } else
-                throw new org.hotswap.agent.javassist.compiler.CompileError("no return statement");
+            }
+            else
+                throw new CompileError("no return statement");
     }
 
-    private boolean needsSuperCall(org.hotswap.agent.javassist.compiler.ast.Stmnt body) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private boolean needsSuperCall(Stmnt body) throws CompileError {
         if (body.getOperator() == BLOCK)
-            body = (org.hotswap.agent.javassist.compiler.ast.Stmnt) body.head();
+            body = (Stmnt)body.head();
 
         if (body != null && body.getOperator() == EXPR) {
-            org.hotswap.agent.javassist.compiler.ast.ASTree expr = body.head();
-            if (expr != null && expr instanceof org.hotswap.agent.javassist.compiler.ast.Expr
-                    && ((org.hotswap.agent.javassist.compiler.ast.Expr) expr).getOperator() == CALL) {
-                org.hotswap.agent.javassist.compiler.ast.ASTree target = ((org.hotswap.agent.javassist.compiler.ast.Expr) expr).head();
-                if (target instanceof org.hotswap.agent.javassist.compiler.ast.Keyword) {
-                    int token = ((org.hotswap.agent.javassist.compiler.ast.Keyword) target).get();
+            ASTree expr = body.head();
+            if (expr != null && expr instanceof Expr
+                && ((Expr)expr).getOperator() == CALL) {
+                ASTree target = ((Expr)expr).head();
+                if (target instanceof Keyword) {
+                    int token = ((Keyword)target).get();
                     return token != THIS && token != SUPER;
                 }
             }
@@ -321,37 +318,40 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return true;
     }
 
-    protected abstract void insertDefaultSuperCall() throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract void insertDefaultSuperCall() throws CompileError;
 
-    public void atStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atStmnt(Stmnt st) throws CompileError {
         if (st == null)
             return;     // empty
 
         int op = st.getOperator();
         if (op == EXPR) {
-            org.hotswap.agent.javassist.compiler.ast.ASTree expr = st.getLeft();
+            ASTree expr = st.getLeft();
             doTypeCheck(expr);
-            if (expr instanceof org.hotswap.agent.javassist.compiler.ast.AssignExpr)
-                atAssignExpr((org.hotswap.agent.javassist.compiler.ast.AssignExpr) expr, false);
+            if (expr instanceof AssignExpr)
+                atAssignExpr((AssignExpr)expr, false);
             else if (isPlusPlusExpr(expr)) {
-                org.hotswap.agent.javassist.compiler.ast.Expr e = (org.hotswap.agent.javassist.compiler.ast.Expr) expr;
+                Expr e = (Expr)expr;
                 atPlusPlus(e.getOperator(), e.oprand1(), e, false);
-            } else {
+            }
+            else {
                 expr.accept(this);
                 if (is2word(exprType, arrayDim))
                     bytecode.addOpcode(POP2);
                 else if (exprType != VOID)
                     bytecode.addOpcode(POP);
             }
-        } else if (op == DECL || op == BLOCK) {
-            org.hotswap.agent.javassist.compiler.ast.ASTList list = st;
+        }
+        else if (op == DECL || op == BLOCK) {
+            ASTList list = st;
             while (list != null) {
-                org.hotswap.agent.javassist.compiler.ast.ASTree h = list.head();
+                ASTree h = list.head();
                 list = list.tail();
                 if (h != null)
                     h.accept(this);
             }
-        } else if (op == IF)
+        }
+        else if (op == IF)
             atIfStmnt(st);
         else if (op == WHILE || op == DO)
             atWhileStmnt(st, op == WHILE);
@@ -372,16 +372,23 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         else {
             // LABEL, SWITCH label stament might be null?.
             hasReturned = false;
-            throw new org.hotswap.agent.javassist.compiler.CompileError(
-                    "sorry, not supported statement: TokenId " + op);
+            throw new CompileError(
+                "sorry, not supported statement: TokenId " + op);
         }
     }
 
-    private void atIfStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
-        org.hotswap.agent.javassist.compiler.ast.ASTree expr = st.head();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt thenp = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.tail().head();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt elsep = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.tail().tail().head();
-        compileBooleanExpr(false, expr);
+    private void atIfStmnt(Stmnt st) throws CompileError {
+        ASTree expr = st.head();
+        Stmnt thenp = (Stmnt)st.tail().head();
+        Stmnt elsep = (Stmnt)st.tail().tail().head();
+        if (compileBooleanExpr(false, expr)) {
+            hasReturned = false;
+            if (elsep != null)
+                elsep.accept(this);
+
+            return;
+        }
+
         int pc = bytecode.currentPc();
         int pc2 = 0;
         bytecode.addIndex(0);   // correct later
@@ -394,13 +401,12 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         hasReturned = false;
 
         if (elsep != null && !thenHasReturned) {
-            bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+            bytecode.addOpcode(Opcode.GOTO);
             pc2 = bytecode.currentPc();
             bytecode.addIndex(0);
         }
 
         bytecode.write16bit(pc, bytecode.currentPc() - pc + 1);
-
         if (elsep != null) {
             elsep.accept(this);
             if (!thenHasReturned)
@@ -410,18 +416,18 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         }
     }
 
-    private void atWhileStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st, boolean notDo) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atWhileStmnt(Stmnt st, boolean notDo) throws CompileError {
         ArrayList prevBreakList = breakList;
         ArrayList prevContList = continueList;
         breakList = new ArrayList();
         continueList = new ArrayList();
 
-        org.hotswap.agent.javassist.compiler.ast.ASTree expr = st.head();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt body = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.tail();
+        ASTree expr = st.head();
+        Stmnt body = (Stmnt)st.tail();
 
         int pc = 0;
         if (notDo) {
-            bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+            bytecode.addOpcode(Opcode.GOTO);
             pc = bytecode.currentPc();
             bytecode.addIndex(0);
         }
@@ -435,8 +441,12 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             bytecode.write16bit(pc, pc3 - pc + 1);
 
         boolean alwaysBranch = compileBooleanExpr(true, expr);
-        bytecode.addIndex(pc2 - bytecode.currentPc() + 1);
+        if (alwaysBranch) {
+            bytecode.addOpcode(Opcode.GOTO);
+            alwaysBranch = breakList.size() == 0;
+        }
 
+        bytecode.addIndex(pc2 - bytecode.currentPc() + 1);
         patchGoto(breakList, bytecode.currentPc());
         patchGoto(continueList, pc3);
         continueList = prevContList;
@@ -447,23 +457,23 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
     protected void patchGoto(ArrayList list, int targetPc) {
         int n = list.size();
         for (int i = 0; i < n; ++i) {
-            int pc = ((Integer) list.get(i)).intValue();
+            int pc = ((Integer)list.get(i)).intValue();
             bytecode.write16bit(pc, targetPc - pc + 1);
         }
     }
 
-    private void atForStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atForStmnt(Stmnt st) throws CompileError {
         ArrayList prevBreakList = breakList;
         ArrayList prevContList = continueList;
         breakList = new ArrayList();
         continueList = new ArrayList();
 
-        org.hotswap.agent.javassist.compiler.ast.Stmnt init = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.head();
-        org.hotswap.agent.javassist.compiler.ast.ASTList p = st.tail();
-        org.hotswap.agent.javassist.compiler.ast.ASTree expr = p.head();
+        Stmnt init = (Stmnt)st.head();
+        ASTList p = st.tail();
+        ASTree expr = p.head();
         p = p.tail();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt update = (org.hotswap.agent.javassist.compiler.ast.Stmnt) p.head();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt body = (org.hotswap.agent.javassist.compiler.ast.Stmnt) p.tail();
+        Stmnt update = (Stmnt)p.head();
+        Stmnt body = (Stmnt)p.tail();
 
         if (init != null)
             init.accept(this);
@@ -471,7 +481,14 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         int pc = bytecode.currentPc();
         int pc2 = 0;
         if (expr != null) {
-            compileBooleanExpr(false, expr);
+            if (compileBooleanExpr(false, expr)) {
+                // in case of "for (...; false; ...)"
+                continueList = prevContList;
+                breakList = prevBreakList;
+                hasReturned = false;
+                return;
+            }
+
             pc2 = bytecode.currentPc();
             bytecode.addIndex(0);
         }
@@ -483,7 +500,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         if (update != null)
             update.accept(this);
 
-        bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+        bytecode.addOpcode(Opcode.GOTO);
         bytecode.addIndex(pc - bytecode.currentPc() + 1);
 
         int pc4 = bytecode.currentPc();
@@ -497,7 +514,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         hasReturned = false;
     }
 
-    private void atSwitchStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atSwitchStmnt(Stmnt st) throws CompileError {
         compileExpr(st.head());
 
         ArrayList prevBreakList = breakList;
@@ -508,10 +525,10 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         while (npads-- > 0)
             bytecode.add(0);
 
-        org.hotswap.agent.javassist.compiler.ast.Stmnt body = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.tail();
+        Stmnt body = (Stmnt)st.tail();
         int npairs = 0;
-        for (org.hotswap.agent.javassist.compiler.ast.ASTList list = body; list != null; list = list.tail())
-            if (((org.hotswap.agent.javassist.compiler.ast.Stmnt) list.head()).getOperator() == CASE)
+        for (ASTList list = body; list != null; list = list.tail())
+            if (((Stmnt)list.head()).getOperator() == CASE)
                 ++npairs;
 
         // opcodePc2 is the position at which the default jump offset is.
@@ -523,8 +540,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         long[] pairs = new long[npairs];
         int ipairs = 0;
         int defaultPc = -1;
-        for (org.hotswap.agent.javassist.compiler.ast.ASTList list = body; list != null; list = list.tail()) {
-            org.hotswap.agent.javassist.compiler.ast.Stmnt label = (org.hotswap.agent.javassist.compiler.ast.Stmnt) list.head();
+        for (ASTList list = body; list != null; list = list.tail()) {
+            Stmnt label = (Stmnt)list.head();
             int op = label.getOperator();
             if (op == DEFAULT)
                 defaultPc = bytecode.currentPc();
@@ -532,21 +549,21 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                 fatal();
             else {
                 pairs[ipairs++]
-                        = ((long) computeLabel(label.head()) << 32) +
-                        ((long) (bytecode.currentPc() - opcodePc) & 0xffffffff);
+                    = ((long)computeLabel(label.head()) << 32) + 
+                      ((long)(bytecode.currentPc() - opcodePc) & 0xffffffff);
             }
 
             hasReturned = false;
-            ((org.hotswap.agent.javassist.compiler.ast.Stmnt) label.tail()).accept(this);
+            ((Stmnt)label.tail()).accept(this);
         }
 
         Arrays.sort(pairs);
         int pc = opcodePc2 + 8;
         for (int i = 0; i < npairs; ++i) {
-            bytecode.write32bit(pc, (int) (pairs[i] >>> 32));
-            bytecode.write32bit(pc + 4, (int) pairs[i]);
+            bytecode.write32bit(pc, (int)(pairs[i] >>> 32));
+            bytecode.write32bit(pc + 4, (int)pairs[i]);
             pc += 8;
-        }
+        } 
 
         if (defaultPc < 0 || breakList.size() > 0)
             hasReturned = false;
@@ -561,23 +578,24 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         breakList = prevBreakList;
     }
 
-    private int computeLabel(org.hotswap.agent.javassist.compiler.ast.ASTree expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private int computeLabel(ASTree expr) throws CompileError {
         doTypeCheck(expr);
-        expr = org.hotswap.agent.javassist.compiler.TypeChecker.stripPlusExpr(expr);
-        if (expr instanceof org.hotswap.agent.javassist.compiler.ast.IntConst)
-            return (int) ((org.hotswap.agent.javassist.compiler.ast.IntConst) expr).get();
+        expr = TypeChecker.stripPlusExpr(expr);
+        if (expr instanceof IntConst)
+            return (int)((IntConst)expr).get();
         else
-            throw new org.hotswap.agent.javassist.compiler.CompileError("bad case label");
+            throw new CompileError("bad case label");
     }
 
-    private void atBreakStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st, boolean notCont)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atBreakStmnt(Stmnt st, boolean notCont)
+        throws CompileError
+    {
         if (st.head() != null)
-            throw new org.hotswap.agent.javassist.compiler.CompileError(
-                    "sorry, not support labeled break or continue");
+            throw new CompileError(
+                        "sorry, not support labeled break or continue");
 
-        bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
-        Integer pc = new Integer(bytecode.currentPc());
+        bytecode.addOpcode(Opcode.GOTO);
+        Integer pc = Integer.valueOf(bytecode.currentPc());
         bytecode.addIndex(0);
         if (notCont)
             breakList.add(pc);
@@ -585,14 +603,14 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             continueList.add(pc);
     }
 
-    protected void atReturnStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected void atReturnStmnt(Stmnt st) throws CompileError {
         atReturnStmnt2(st.getLeft());
     }
 
-    protected final void atReturnStmnt2(org.hotswap.agent.javassist.compiler.ast.ASTree result) throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected final void atReturnStmnt2(ASTree result) throws CompileError {
         int op;
         if (result == null)
-            op = org.hotswap.agent.javassist.bytecode.Opcode.RETURN;
+            op = Opcode.RETURN;
         else {
             compileExpr(result);
             if (arrayDim > 0)
@@ -622,11 +640,11 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         hasReturned = true;
     }
 
-    private void atThrowStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
-        org.hotswap.agent.javassist.compiler.ast.ASTree e = st.getLeft();
+    private void atThrowStmnt(Stmnt st) throws CompileError {
+        ASTree e = st.getLeft();
         compileExpr(e);
         if (exprType != CLASS || arrayDim > 0)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("bad throw statement");
+            throw new CompileError("bad throw statement");
 
         bytecode.addOpcode(ATHROW);
         hasReturned = true;
@@ -634,19 +652,19 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
     /* overridden in MemberCodeGen
      */
-    protected void atTryStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected void atTryStmnt(Stmnt st) throws CompileError {
         hasReturned = false;
     }
 
-    private void atSyncStmnt(org.hotswap.agent.javassist.compiler.ast.Stmnt st) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atSyncStmnt(Stmnt st) throws CompileError {
         int nbreaks = getListSize(breakList);
         int ncontinues = getListSize(continueList);
 
         compileExpr(st.head());
         if (exprType != CLASS && arrayDim == 0)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("bad type expr for synchronized block");
+            throw new CompileError("bad type expr for synchronized block");
 
-        org.hotswap.agent.javassist.bytecode.Bytecode bc = bytecode;
+        Bytecode bc = bytecode;
         final int var = bc.getMaxLocals();
         bc.incMaxLocals(1);
         bc.addOpcode(DUP);
@@ -654,7 +672,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         bc.addOpcode(MONITORENTER);
 
         ReturnHook rh = new ReturnHook(this) {
-            protected boolean doit(org.hotswap.agent.javassist.bytecode.Bytecode b, int opcode) {
+            protected boolean doit(Bytecode b, int opcode) {
                 b.addAload(var);
                 b.addOpcode(MONITOREXIT);
                 return false;
@@ -662,7 +680,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         };
 
         int pc = bc.currentPc();
-        org.hotswap.agent.javassist.compiler.ast.Stmnt body = (org.hotswap.agent.javassist.compiler.ast.Stmnt) st.tail();
+        Stmnt body = (Stmnt)st.tail();
         if (body != null)
             body.accept(this);
 
@@ -670,7 +688,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         int pc3 = 0;
         if (!hasReturned) {
             rh.doit(bc, 0);     // the 2nd arg is ignored.
-            bc.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+            bc.addOpcode(Opcode.GOTO);
             pc3 = bc.currentPc();
             bc.addIndex(0);
         }
@@ -688,25 +706,25 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         rh.remove(this);
 
         if (getListSize(breakList) != nbreaks
-                || getListSize(continueList) != ncontinues)
-            throw new org.hotswap.agent.javassist.compiler.CompileError(
-                    "sorry, cannot break/continue in synchronized block");
+            || getListSize(continueList) != ncontinues)
+            throw new CompileError(
+                "sorry, cannot break/continue in synchronized block");
     }
 
     private static int getListSize(ArrayList list) {
         return list == null ? 0 : list.size();
     }
 
-    private static boolean isPlusPlusExpr(org.hotswap.agent.javassist.compiler.ast.ASTree expr) {
-        if (expr instanceof org.hotswap.agent.javassist.compiler.ast.Expr) {
-            int op = ((org.hotswap.agent.javassist.compiler.ast.Expr) expr).getOperator();
+    private static boolean isPlusPlusExpr(ASTree expr) {
+        if (expr instanceof Expr) {
+            int op = ((Expr)expr).getOperator();
             return op == PLUSPLUS || op == MINUSMINUS;
         }
 
         return false;
     }
 
-    public void atDeclarator(org.hotswap.agent.javassist.compiler.ast.Declarator d) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atDeclarator(Declarator d) throws CompileError {
         d.setLocalVar(getMaxLocals());
         d.setClassName(resolveClassName(d.getClassName()));
 
@@ -720,36 +738,37 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
         /*  NOTE: Array initializers has not been supported.
          */
-        org.hotswap.agent.javassist.compiler.ast.ASTree init = d.getInitializer();
+        ASTree init = d.getInitializer();
         if (init != null) {
             doTypeCheck(init);
             atVariableAssign(null, '=', null, d, init, false);
         }
     }
 
-    public abstract void atNewExpr(org.hotswap.agent.javassist.compiler.ast.NewExpr n) throws org.hotswap.agent.javassist.compiler.CompileError;
+    public abstract void atNewExpr(NewExpr n) throws CompileError;
 
-    public abstract void atArrayInit(org.hotswap.agent.javassist.compiler.ast.ArrayInit init) throws org.hotswap.agent.javassist.compiler.CompileError;
+    public abstract void atArrayInit(ArrayInit init) throws CompileError;
 
-    public void atAssignExpr(org.hotswap.agent.javassist.compiler.ast.AssignExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atAssignExpr(AssignExpr expr) throws CompileError {
         atAssignExpr(expr, true);
     }
 
-    protected void atAssignExpr(org.hotswap.agent.javassist.compiler.ast.AssignExpr expr, boolean doDup)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected void atAssignExpr(AssignExpr expr, boolean doDup)
+        throws CompileError
+    {
         // =, %=, &=, *=, /=, +=, -=, ^=, |=, <<=, >>=, >>>=
         int op = expr.getOperator();
-        org.hotswap.agent.javassist.compiler.ast.ASTree left = expr.oprand1();
-        org.hotswap.agent.javassist.compiler.ast.ASTree right = expr.oprand2();
-        if (left instanceof org.hotswap.agent.javassist.compiler.ast.Variable)
-            atVariableAssign(expr, op, (org.hotswap.agent.javassist.compiler.ast.Variable) left,
-                    ((org.hotswap.agent.javassist.compiler.ast.Variable) left).getDeclarator(),
-                    right, doDup);
+        ASTree left = expr.oprand1();
+        ASTree right = expr.oprand2();
+        if (left instanceof Variable)
+            atVariableAssign(expr, op, (Variable)left,
+                             ((Variable)left).getDeclarator(),
+                             right, doDup);
         else {
-            if (left instanceof org.hotswap.agent.javassist.compiler.ast.Expr) {
-                org.hotswap.agent.javassist.compiler.ast.Expr e = (org.hotswap.agent.javassist.compiler.ast.Expr) left;
+            if (left instanceof Expr) {
+                Expr e = (Expr)left;
                 if (e.getOperator() == ARRAY) {
-                    atArrayAssign(expr, op, (org.hotswap.agent.javassist.compiler.ast.Expr) left, right, doDup);
+                    atArrayAssign(expr, op, (Expr)left, right, doDup);
                     return;
                 }
             }
@@ -758,23 +777,24 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         }
     }
 
-    protected static void badAssign(org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected static void badAssign(Expr expr) throws CompileError {
         String msg;
         if (expr == null)
             msg = "incompatible type for assignment";
         else
             msg = "incompatible type for " + expr.getName();
 
-        throw new org.hotswap.agent.javassist.compiler.CompileError(msg);
+        throw new CompileError(msg);
     }
 
     /* op is either =, %=, &=, *=, /=, +=, -=, ^=, |=, <<=, >>=, or >>>=.
      *
      * expr and var can be null.
      */
-    private void atVariableAssign(org.hotswap.agent.javassist.compiler.ast.Expr expr, int op, org.hotswap.agent.javassist.compiler.ast.Variable var,
-                                  org.hotswap.agent.javassist.compiler.ast.Declarator d, org.hotswap.agent.javassist.compiler.ast.ASTree right,
-                                  boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atVariableAssign(Expr expr, int op, Variable var,
+                                  Declarator d, ASTree right,
+                                  boolean doDup) throws CompileError
+    {
         int varType = d.getType();
         int varArray = d.getArrayDim();
         String varClass = d.getClassName();
@@ -784,8 +804,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             atVariable(var);
 
         // expr is null if the caller is atDeclarator().
-        if (expr == null && right instanceof org.hotswap.agent.javassist.compiler.ast.ArrayInit)
-            atArrayVariableAssign((org.hotswap.agent.javassist.compiler.ast.ArrayInit) right, varType, varArray, varClass);
+        if (expr == null && right instanceof ArrayInit)
+            atArrayVariableAssign((ArrayInit)right, varType, varArray, varClass);
         else
             atAssignCore(expr, op, right, varType, varArray, varClass);
 
@@ -813,11 +833,12 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         className = varClass;
     }
 
-    protected abstract void atArrayVariableAssign(org.hotswap.agent.javassist.compiler.ast.ArrayInit init,
-                                                  int varType, int varArray, String varClass) throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract void atArrayVariableAssign(ArrayInit init,
+            int varType, int varArray, String varClass) throws CompileError;
 
-    private void atArrayAssign(org.hotswap.agent.javassist.compiler.ast.Expr expr, int op, org.hotswap.agent.javassist.compiler.ast.Expr array,
-                               org.hotswap.agent.javassist.compiler.ast.ASTree right, boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atArrayAssign(Expr expr, int op, Expr array,
+                        ASTree right, boolean doDup) throws CompileError
+    {
         arrayAccess(array.oprand1(), array.oprand2());
 
         if (op != '=') {
@@ -843,18 +864,19 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         className = cname;
     }
 
-    protected abstract void atFieldAssign(org.hotswap.agent.javassist.compiler.ast.Expr expr, int op, org.hotswap.agent.javassist.compiler.ast.ASTree left,
-                                          org.hotswap.agent.javassist.compiler.ast.ASTree right, boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract void atFieldAssign(Expr expr, int op, ASTree left,
+                        ASTree right, boolean doDup) throws CompileError;
 
-    protected void atAssignCore(org.hotswap.agent.javassist.compiler.ast.Expr expr, int op, org.hotswap.agent.javassist.compiler.ast.ASTree right,
+    protected void atAssignCore(Expr expr, int op, ASTree right,
                                 int type, int dim, String cname)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+        throws CompileError
+    {
         if (op == PLUS_E && dim == 0 && type == CLASS)
             atStringPlusEq(expr, type, dim, cname, right);
         else {
             right.accept(this);
             if (invalidDim(exprType, arrayDim, className, type, dim, cname,
-                    false) || (op != '=' && dim > 0))
+                           false) || (op != '=' && dim > 0))
                 badAssign(expr);
 
             if (op != '=') {
@@ -873,9 +895,10 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         // type check should be done here.
     }
 
-    private void atStringPlusEq(org.hotswap.agent.javassist.compiler.ast.Expr expr, int type, int dim, String cname,
-                                org.hotswap.agent.javassist.compiler.ast.ASTree right)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atStringPlusEq(Expr expr, int type, int dim, String cname,
+                                ASTree right)
+        throws CompileError
+    {
         if (!jvmJavaLangString.equals(cname))
             badAssign(expr);
 
@@ -883,7 +906,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         right.accept(this);
         convToString(exprType, arrayDim);
         bytecode.addInvokevirtual(javaLangString, "concat",
-                "(Ljava/lang/String;)Ljava/lang/String;");
+                                "(Ljava/lang/String;)Ljava/lang/String;");
         exprType = CLASS;
         arrayDim = 0;
         className = jvmJavaLangString;
@@ -891,15 +914,16 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
     private boolean invalidDim(int srcType, int srcDim, String srcClass,
                                int destType, int destDim, String destClass,
-                               boolean isCast) {
+                               boolean isCast)
+    {
         if (srcDim != destDim)
             if (srcType == NULL)
                 return false;
             else if (destDim == 0 && destType == CLASS
-                    && jvmJavaLangObject.equals(destClass))
+                     && jvmJavaLangObject.equals(destClass))
                 return false;
             else if (isCast && srcDim == 0 && srcType == CLASS
-                    && jvmJavaLangObject.equals(srcClass))
+                     && jvmJavaLangObject.equals(srcClass))
                 return false;
             else
                 return true;
@@ -907,35 +931,38 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return false;
     }
 
-    public void atCondExpr(org.hotswap.agent.javassist.compiler.ast.CondExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
-        booleanExpr(false, expr.condExpr());
-        int pc = bytecode.currentPc();
-        bytecode.addIndex(0);   // correct later
-        expr.thenExpr().accept(this);
-        int dim1 = arrayDim;
-        bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
-        int pc2 = bytecode.currentPc();
-        bytecode.addIndex(0);
-        bytecode.write16bit(pc, bytecode.currentPc() - pc + 1);
-        expr.elseExpr().accept(this);
-        if (dim1 != arrayDim)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("type mismatch in ?:");
+    public void atCondExpr(CondExpr expr) throws CompileError {
+        if (booleanExpr(false, expr.condExpr()))
+            expr.elseExpr().accept(this);
+        else {
+            int pc = bytecode.currentPc();
+            bytecode.addIndex(0);   // correct later
+            expr.thenExpr().accept(this);
+            int dim1 = arrayDim;
+            bytecode.addOpcode(Opcode.GOTO);
+            int pc2 = bytecode.currentPc();
+            bytecode.addIndex(0);
+            bytecode.write16bit(pc, bytecode.currentPc() - pc + 1);
+            expr.elseExpr().accept(this);
+            if (dim1 != arrayDim)
+                throw new CompileError("type mismatch in ?:");
 
-        bytecode.write16bit(pc2, bytecode.currentPc() - pc2 + 1);
+            bytecode.write16bit(pc2, bytecode.currentPc() - pc2 + 1);
+        }
     }
 
     static final int[] binOp = {
-            '+', DADD, FADD, LADD, IADD,
-            '-', DSUB, FSUB, LSUB, ISUB,
-            '*', DMUL, FMUL, LMUL, IMUL,
-            '/', DDIV, FDIV, LDIV, IDIV,
-            '%', DREM, FREM, LREM, IREM,
-            '|', NOP, NOP, LOR, IOR,
-            '^', NOP, NOP, LXOR, IXOR,
-            '&', NOP, NOP, LAND, IAND,
-            LSHIFT, NOP, NOP, LSHL, ISHL,
-            RSHIFT, NOP, NOP, LSHR, ISHR,
-            ARSHIFT, NOP, NOP, LUSHR, IUSHR};
+        '+', DADD, FADD, LADD, IADD,
+        '-', DSUB, FSUB, LSUB, ISUB,
+        '*', DMUL, FMUL, LMUL, IMUL,
+        '/', DDIV, FDIV, LDIV, IDIV,
+        '%', DREM, FREM, LREM, IREM,
+        '|', NOP,  NOP,  LOR,  IOR,
+        '^', NOP,  NOP,  LXOR, IXOR,
+        '&', NOP,  NOP,  LAND, IAND,
+        LSHIFT, NOP, NOP, LSHL, ISHL,
+        RSHIFT, NOP, NOP, LSHR, ISHR,
+        ARSHIFT, NOP, NOP, LUSHR, IUSHR };
 
     static int lookupBinOp(int token) {
         int[] code = binOp;
@@ -947,7 +974,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return -1;
     }
 
-    public void atBinExpr(org.hotswap.agent.javassist.compiler.ast.BinExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atBinExpr(BinExpr expr) throws CompileError {
         int token = expr.getOperator();
 
         /* arithmetic operators: +, -, *, /, %, |, ^, &, <<, >>, >>>
@@ -955,7 +982,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         int k = lookupBinOp(token);
         if (k >= 0) {
             expr.oprand1().accept(this);
-            org.hotswap.agent.javassist.compiler.ast.ASTree right = expr.oprand2();
+            ASTree right = expr.oprand2();
             if (right == null)
                 return;     // see TypeChecker.atBinExpr().
 
@@ -964,21 +991,24 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             String cname1 = className;
             right.accept(this);
             if (dim1 != arrayDim)
-                throw new org.hotswap.agent.javassist.compiler.CompileError("incompatible array types");
+                throw new CompileError("incompatible array types");
 
             if (token == '+' && dim1 == 0
-                    && (type1 == CLASS || exprType == CLASS))
+                && (type1 == CLASS || exprType == CLASS))
                 atStringConcatExpr(expr, type1, dim1, cname1);
             else
                 atArithBinExpr(expr, token, k, type1);
-        } else {
+        }
+        else {
             /* equation: &&, ||, ==, !=, <=, >=, <, >
             */
-            booleanExpr(true, expr);
-            bytecode.addIndex(7);
-            bytecode.addIconst(0);  // false
-            bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
-            bytecode.addIndex(4);
+            if (!booleanExpr(true, expr)) {
+                bytecode.addIndex(7);
+                bytecode.addIconst(0);  // false
+                bytecode.addOpcode(Opcode.GOTO);
+                bytecode.addIndex(4);
+            }
+
             bytecode.addIconst(1);  // true
         }
     }
@@ -987,15 +1017,16 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
      * If an oprand type is not a numeric type, this method
      * throws an exception.
      */
-    private void atArithBinExpr(org.hotswap.agent.javassist.compiler.ast.Expr expr, int token,
-                                int index, int type1) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atArithBinExpr(Expr expr, int token,
+                                int index, int type1) throws CompileError
+    {
         if (arrayDim != 0)
             badTypes(expr);
 
         int type2 = exprType;
         if (token == LSHIFT || token == RSHIFT || token == ARSHIFT)
             if (type2 == INT || type2 == SHORT
-                    || type2 == CHAR || type2 == BYTE)
+                || type2 == CHAR || type2 == BYTE)
                 exprType = type1;
             else
                 badTypes(expr);
@@ -1017,13 +1048,14 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         badTypes(expr);
     }
 
-    private void atStringConcatExpr(org.hotswap.agent.javassist.compiler.ast.Expr expr, int type1, int dim1,
-                                    String cname1) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atStringConcatExpr(Expr expr, int type1, int dim1,
+                                    String cname1) throws CompileError
+    {
         int type2 = exprType;
         int dim2 = arrayDim;
         boolean type2Is2 = is2word(type2, dim2);
         boolean type2IsString
-                = (type2 == CLASS && jvmJavaLangString.equals(className));
+            = (type2 == CLASS && jvmJavaLangString.equals(className));
 
         if (type2Is2)
             convToString(type2, dim2);
@@ -1031,7 +1063,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         if (is2word(type1, dim1)) {
             bytecode.addOpcode(DUP_X2);
             bytecode.addOpcode(POP);
-        } else
+        }
+        else
             bytecode.addOpcode(SWAP);
 
         // even if type1 is String, the left operand might be null.
@@ -1042,76 +1075,90 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             convToString(type2, dim2);
 
         bytecode.addInvokevirtual(javaLangString, "concat",
-                "(Ljava/lang/String;)Ljava/lang/String;");
+                                "(Ljava/lang/String;)Ljava/lang/String;");
         exprType = CLASS;
         arrayDim = 0;
         className = jvmJavaLangString;
     }
 
-    private void convToString(int type, int dim) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void convToString(int type, int dim) throws CompileError {
         final String method = "valueOf";
 
         if (isRefType(type) || dim > 0)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(Ljava/lang/Object;)Ljava/lang/String;");
+                                "(Ljava/lang/Object;)Ljava/lang/String;");
         else if (type == DOUBLE)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(D)Ljava/lang/String;");
+                                     "(D)Ljava/lang/String;");
         else if (type == FLOAT)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(F)Ljava/lang/String;");
+                                     "(F)Ljava/lang/String;");
         else if (type == LONG)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(J)Ljava/lang/String;");
+                                     "(J)Ljava/lang/String;");
         else if (type == BOOLEAN)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(Z)Ljava/lang/String;");
+                                     "(Z)Ljava/lang/String;");
         else if (type == CHAR)
             bytecode.addInvokestatic(javaLangString, method,
-                    "(C)Ljava/lang/String;");
+                                     "(C)Ljava/lang/String;");
         else if (type == VOID)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("void type expression");
+            throw new CompileError("void type expression");
         else /* INT, BYTE, SHORT */
             bytecode.addInvokestatic(javaLangString, method,
-                    "(I)Ljava/lang/String;");
+                                     "(I)Ljava/lang/String;");
     }
 
     /* Produces the opcode to branch if the condition is true.
-     * The oprand is not produced.
+     * The oprand (branch offset) is not produced.
      *
      * @return	true if the compiled code is GOTO (always branch).
+     * 			GOTO is not produced.
      */
-    private boolean booleanExpr(boolean branchIf, org.hotswap.agent.javassist.compiler.ast.ASTree expr)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    private boolean booleanExpr(boolean branchIf, ASTree expr)
+        throws CompileError
+    {
         boolean isAndAnd;
         int op = getCompOperator(expr);
         if (op == EQ) {         // ==, !=, ...
-            org.hotswap.agent.javassist.compiler.ast.BinExpr bexpr = (org.hotswap.agent.javassist.compiler.ast.BinExpr) expr;
+            BinExpr bexpr = (BinExpr)expr;
             int type1 = compileOprands(bexpr);
             // here, arrayDim might represent the array dim. of the left oprand
             // if the right oprand is NULL.
             compareExpr(branchIf, bexpr.getOperator(), type1, bexpr);
-        } else if (op == '!')
-            booleanExpr(!branchIf, ((org.hotswap.agent.javassist.compiler.ast.Expr) expr).oprand1());
+        }
+        else if (op == '!')
+            return booleanExpr(!branchIf, ((Expr)expr).oprand1());
         else if ((isAndAnd = (op == ANDAND)) || op == OROR) {
-            org.hotswap.agent.javassist.compiler.ast.BinExpr bexpr = (org.hotswap.agent.javassist.compiler.ast.BinExpr) expr;
-            booleanExpr(!isAndAnd, bexpr.oprand1());
-            int pc = bytecode.currentPc();
-            bytecode.addIndex(0);       // correct later
-
-            booleanExpr(isAndAnd, bexpr.oprand2());
-            bytecode.write16bit(pc, bytecode.currentPc() - pc + 3);
-            if (branchIf != isAndAnd) {
-                bytecode.addIndex(6);   // skip GOTO instruction
-                bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+            BinExpr bexpr = (BinExpr)expr;
+            if (booleanExpr(!isAndAnd, bexpr.oprand1())) {
+                exprType = BOOLEAN;
+                arrayDim = 0;
+                return true;
             }
-        } else if (isAlwaysBranch(expr, branchIf)) {
-            bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
-            return true;    // always branch
-        } else {                          // others
+            else {
+            	int pc = bytecode.currentPc();
+            	bytecode.addIndex(0);       // correct later
+            	if (booleanExpr(isAndAnd, bexpr.oprand2()))
+            		bytecode.addOpcode(Opcode.GOTO);
+
+            	bytecode.write16bit(pc, bytecode.currentPc() - pc + 3);
+            	if (branchIf != isAndAnd) {
+            		bytecode.addIndex(6);   // skip GOTO instruction
+            		bytecode.addOpcode(Opcode.GOTO);
+            	}
+            }
+        }
+        else if (isAlwaysBranch(expr, branchIf)) {
+        	// Opcode.GOTO is not added here.  The caller must add it.
+            exprType = BOOLEAN;
+            arrayDim = 0;
+            return true;	// always branch
+        }
+        else {                          // others
             expr.accept(this);
             if (exprType != BOOLEAN || arrayDim != 0)
-                throw new org.hotswap.agent.javassist.compiler.CompileError("boolean expr is required");
+                throw new CompileError("boolean expr is required");
 
             bytecode.addOpcode(branchIf ? IFNE : IFEQ);
         }
@@ -1121,25 +1168,24 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return false;
     }
 
-
-    private static boolean isAlwaysBranch(org.hotswap.agent.javassist.compiler.ast.ASTree expr, boolean branchIf) {
-        if (expr instanceof org.hotswap.agent.javassist.compiler.ast.Keyword) {
-            int t = ((org.hotswap.agent.javassist.compiler.ast.Keyword) expr).get();
+    private static boolean isAlwaysBranch(ASTree expr, boolean branchIf) {
+        if (expr instanceof Keyword) {
+            int t = ((Keyword)expr).get();
             return branchIf ? t == TRUE : t == FALSE;
         }
 
         return false;
     }
 
-    static int getCompOperator(org.hotswap.agent.javassist.compiler.ast.ASTree expr) throws org.hotswap.agent.javassist.compiler.CompileError {
-        if (expr instanceof org.hotswap.agent.javassist.compiler.ast.Expr) {
-            org.hotswap.agent.javassist.compiler.ast.Expr bexpr = (org.hotswap.agent.javassist.compiler.ast.Expr) expr;
+    static int getCompOperator(ASTree expr) throws CompileError {
+        if (expr instanceof Expr) {
+            Expr bexpr = (Expr)expr;
             int token = bexpr.getOperator();
             if (token == '!')
                 return '!';
-            else if ((bexpr instanceof org.hotswap.agent.javassist.compiler.ast.BinExpr)
-                    && token != OROR && token != ANDAND
-                    && token != '&' && token != '|')
+            else if ((bexpr instanceof BinExpr)
+                     && token != OROR && token != ANDAND
+                     && token != '&' && token != '|')
                 return EQ;      // ==, !=, ...
             else
                 return token;
@@ -1148,14 +1194,14 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         return ' ';     // others
     }
 
-    private int compileOprands(org.hotswap.agent.javassist.compiler.ast.BinExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private int compileOprands(BinExpr expr) throws CompileError {
         expr.oprand1().accept(this);
         int type1 = exprType;
         int dim1 = arrayDim;
         expr.oprand2().accept(this);
         if (dim1 != arrayDim)
             if (type1 != NULL && exprType != NULL)
-                throw new org.hotswap.agent.javassist.compiler.CompileError("incompatible array types");
+                throw new CompileError("incompatible array types");
             else if (exprType == NULL)
                 arrayDim = dim1;
 
@@ -1165,19 +1211,19 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             return type1;
     }
 
-    private static final int ifOp[] = {EQ, IF_ICMPEQ, IF_ICMPNE,
-            NEQ, IF_ICMPNE, IF_ICMPEQ,
-            LE, IF_ICMPLE, IF_ICMPGT,
-            GE, IF_ICMPGE, IF_ICMPLT,
-            '<', IF_ICMPLT, IF_ICMPGE,
-            '>', IF_ICMPGT, IF_ICMPLE};
+    private static final int ifOp[] = { EQ, IF_ICMPEQ, IF_ICMPNE,
+                                        NEQ, IF_ICMPNE, IF_ICMPEQ,
+                                        LE, IF_ICMPLE, IF_ICMPGT,
+                                        GE, IF_ICMPGE, IF_ICMPLT,
+                                        '<', IF_ICMPLT, IF_ICMPGE,
+                                        '>', IF_ICMPGT, IF_ICMPLE };
 
-    private static final int ifOp2[] = {EQ, IFEQ, IFNE,
-            NEQ, IFNE, IFEQ,
-            LE, IFLE, IFGT,
-            GE, IFGE, IFLT,
-            '<', IFLT, IFGE,
-            '>', IFGT, IFLE};
+    private static final int ifOp2[] = { EQ, IFEQ, IFNE,
+                                         NEQ, IFNE, IFEQ,
+                                         LE, IFLE, IFGT,
+                                         GE, IFGE, IFLT,
+                                         '<', IFLT, IFGE,
+                                         '>', IFGT, IFLE };
 
     /* Produces the opcode to branch if the condition is true.
      * The oprands are not produced.
@@ -1185,8 +1231,9 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
      * Parameter expr - compare expression ==, !=, <=, >=, <, >
      */
     private void compareExpr(boolean branchIf,
-                             int token, int type1, org.hotswap.agent.javassist.compiler.ast.BinExpr expr)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+                             int token, int type1, BinExpr expr)
+        throws CompileError
+    {
         if (arrayDim == 0)
             convertOprandTypes(type1, exprType, expr);
 
@@ -1198,44 +1245,46 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                 bytecode.addOpcode(branchIf ? IF_ACMPNE : IF_ACMPEQ);
             else
                 badTypes(expr);
-        else if (p == P_INT) {
-            int op[] = ifOp;
-            for (int i = 0; i < op.length; i += 3)
-                if (op[i] == token) {
-                    bytecode.addOpcode(op[i + (branchIf ? 1 : 2)]);
-                    return;
-                }
+        else
+            if (p == P_INT) {
+                int op[] = ifOp;
+                for (int i = 0; i < op.length; i += 3)
+                    if (op[i] == token) {
+                        bytecode.addOpcode(op[i + (branchIf ? 1 : 2)]);
+                        return;
+                    }
 
-            badTypes(expr);
-        } else {
-            if (p == P_DOUBLE)
-                if (token == '<' || token == LE)
-                    bytecode.addOpcode(DCMPG);
+                badTypes(expr);
+            }
+            else {
+                if (p == P_DOUBLE)
+                    if (token == '<' || token == LE)
+                        bytecode.addOpcode(DCMPG);
+                    else
+                        bytecode.addOpcode(DCMPL);
+                else if (p == P_FLOAT)
+                    if (token == '<' || token == LE)
+                        bytecode.addOpcode(FCMPG);
+                    else
+                        bytecode.addOpcode(FCMPL);
+                else if (p == P_LONG)
+                    bytecode.addOpcode(LCMP); // 1: >, 0: =, -1: <
                 else
-                    bytecode.addOpcode(DCMPL);
-            else if (p == P_FLOAT)
-                if (token == '<' || token == LE)
-                    bytecode.addOpcode(FCMPG);
-                else
-                    bytecode.addOpcode(FCMPL);
-            else if (p == P_LONG)
-                bytecode.addOpcode(LCMP); // 1: >, 0: =, -1: <
-            else
-                fatal();
+                    fatal();
 
-            int[] op = ifOp2;
-            for (int i = 0; i < op.length; i += 3)
-                if (op[i] == token) {
-                    bytecode.addOpcode(op[i + (branchIf ? 1 : 2)]);
-                    return;
-                }
+                int[] op = ifOp2;
+                for (int i = 0; i < op.length; i += 3)
+                    if (op[i] == token) {
+                        bytecode.addOpcode(op[i + (branchIf ? 1 : 2)]);
+                        return;
+                    }
 
-            badTypes(expr);
-        }
+                badTypes(expr);
+            }
     }
 
-    protected static void badTypes(org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
-        throw new org.hotswap.agent.javassist.compiler.CompileError("invalid types for " + expr.getName());
+    protected static void badTypes(Expr expr) throws CompileError {
+        throw new CompileError("invalid types for " + expr.getName());
     }
 
     private static final int P_DOUBLE = 0;
@@ -1280,13 +1329,14 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             /* double */ NOP, D2F, D2L, D2I,
             /* float  */ F2D, NOP, F2L, F2I,
             /* long   */ L2D, L2F, NOP, L2I,
-            /* other  */ I2D, I2F, I2L, NOP};
+            /* other  */ I2D, I2F, I2L, NOP };
 
     /* do implicit type conversion.
      * arrayDim values of the two oprands must be zero.
      */
-    private void convertOprandTypes(int type1, int type2, org.hotswap.agent.javassist.compiler.ast.Expr expr)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void convertOprandTypes(int type1, int type2, Expr expr)
+        throws CompileError
+    {
         boolean rightStrong;
         int type1_p = typePrecedence(type1);
         int type2_p = typePrecedence(type2);
@@ -1303,7 +1353,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             exprType = type1;
             op = castOp[type2_p * 4 + type1_p];
             result_type = type1_p;
-        } else {
+        }
+        else {
             rightStrong = true;
             op = castOp[type1_p * 4 + type2_p];
             result_type = type2_p;
@@ -1320,22 +1371,26 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                 bytecode.addOpcode(op);
                 bytecode.addOpcode(DUP2_X2);
                 bytecode.addOpcode(POP2);
-            } else if (result_type == P_FLOAT) {
+            }
+            else if (result_type == P_FLOAT) {
                 if (type1_p == P_LONG) {
                     bytecode.addOpcode(DUP_X2);
                     bytecode.addOpcode(POP);
-                } else
+                }
+                else
                     bytecode.addOpcode(SWAP);
 
                 bytecode.addOpcode(op);
                 bytecode.addOpcode(SWAP);
-            } else
+            }
+            else
                 fatal();
-        } else if (op != NOP)
+        }
+        else if (op != NOP)
             bytecode.addOpcode(op);
     }
 
-    public void atCastExpr(org.hotswap.agent.javassist.compiler.ast.CastExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atCastExpr(CastExpr expr) throws CompileError {
         String cname = resolveClassName(expr.getClassName());
         String toClass = checkCastExpr(expr, cname);
         int srcType = exprType;
@@ -1348,7 +1403,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             bytecode.addCheckcast(toClass);
     }
 
-    public void atInstanceOfExpr(org.hotswap.agent.javassist.compiler.ast.InstanceOfExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atInstanceOfExpr(InstanceOfExpr expr) throws CompileError {
         String cname = resolveClassName(expr.getClassName());
         String toClass = checkCastExpr(expr, cname);
         bytecode.addInstanceof(toClass);
@@ -1356,34 +1411,39 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         arrayDim = 0;
     }
 
-    private String checkCastExpr(org.hotswap.agent.javassist.compiler.ast.CastExpr expr, String name)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    private String checkCastExpr(CastExpr expr, String name)
+        throws CompileError
+    {
         final String msg = "invalid cast";
-        org.hotswap.agent.javassist.compiler.ast.ASTree oprand = expr.getOprand();
+        ASTree oprand = expr.getOprand();
         int dim = expr.getArrayDim();
         int type = expr.getType();
         oprand.accept(this);
         int srcType = exprType;
+        int srcDim = arrayDim;
         if (invalidDim(srcType, arrayDim, className, type, dim, name, true)
-                || srcType == VOID || type == VOID)
-            throw new org.hotswap.agent.javassist.compiler.CompileError(msg);
+            || srcType == VOID || type == VOID)
+            throw new CompileError(msg);
 
         if (type == CLASS) {
-            if (!isRefType(srcType))
-                throw new org.hotswap.agent.javassist.compiler.CompileError(msg);
+            if (!isRefType(srcType) && srcDim == 0)
+                throw new CompileError(msg);
 
             return toJvmArrayName(name, dim);
-        } else if (dim > 0)
-            return toJvmTypeName(type, dim);
+        }
         else
-            return null;    // built-in type
+            if (dim > 0)
+                return toJvmTypeName(type, dim);
+            else
+                return null;    // built-in type
     }
 
     void atNumCastExpr(int srcType, int destType)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+        throws CompileError
+    {
         if (srcType == destType)
             return;
-
+        
         int op, op2;
         int stype = typePrecedence(srcType);
         int dtype = typePrecedence(destType);
@@ -1415,36 +1475,41 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                 bytecode.addOpcode(op2);
     }
 
-    public void atExpr(org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atExpr(Expr expr) throws CompileError {
         // array access, member access,
         // (unary) +, (unary) -, ++, --, !, ~
 
         int token = expr.getOperator();
-        org.hotswap.agent.javassist.compiler.ast.ASTree oprand = expr.oprand1();
+        ASTree oprand = expr.oprand1();
         if (token == '.') {
-            String member = ((org.hotswap.agent.javassist.compiler.ast.Symbol) expr.oprand2()).get();
-            if (member.equals("class"))
+            String member = ((Symbol)expr.oprand2()).get();
+            if (member.equals("class"))                
                 atClassObject(expr);  // .class
             else
                 atFieldRead(expr);
-        } else if (token == MEMBER) {     // field read
+        }
+        else if (token == MEMBER) {     // field read
             /* MEMBER ('#') is an extension by Javassist.
              * The compiler internally uses # for compiling .class
              * expressions such as "int.class".
              */
             atFieldRead(expr);
-        } else if (token == ARRAY)
+        }
+        else if (token == ARRAY)
             atArrayRead(oprand, expr.oprand2());
         else if (token == PLUSPLUS || token == MINUSMINUS)
             atPlusPlus(token, oprand, expr, true);
         else if (token == '!') {
-            booleanExpr(false, expr);
-            bytecode.addIndex(7);
-            bytecode.addIconst(1);
-            bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
-            bytecode.addIndex(4);
+            if (!booleanExpr(false, expr)) {
+                bytecode.addIndex(7);
+                bytecode.addIconst(1);
+                bytecode.addOpcode(Opcode.GOTO);
+                bytecode.addIndex(4);
+            }
+
             bytecode.addIconst(0);
-        } else if (token == CALL)         // method call
+        }
+        else if (token == CALL)         // method call
             fatal();
         else {
             expr.oprand1().accept(this);
@@ -1462,43 +1527,49 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                 else if (type == P_INT) {
                     bytecode.addOpcode(INEG);
                     exprType = INT;     // type may be BYTE, ...
-                } else
+                }
+                else
                     badType(expr);
-            } else if (token == '~') {
+            }
+            else if (token == '~') {
                 if (type == P_INT) {
                     bytecode.addIconst(-1);
                     bytecode.addOpcode(IXOR);
                     exprType = INT;     // type may be BYTE. ...
-                } else if (type == P_LONG) {
+                }
+                else if (type == P_LONG) {
                     bytecode.addLconst(-1);
                     bytecode.addOpcode(LXOR);
-                } else
+                }
+                else
                     badType(expr);
 
-            } else if (token == '+') {
+            }
+            else if (token == '+') {
                 if (type == P_OTHER)
                     badType(expr);
 
                 // do nothing. ignore.
-            } else
+            }
+            else
                 fatal();
         }
     }
 
-    protected static void badType(org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
-        throw new org.hotswap.agent.javassist.compiler.CompileError("invalid type for " + expr.getName());
+    protected static void badType(Expr expr) throws CompileError {
+        throw new CompileError("invalid type for " + expr.getName());
     }
 
-    public abstract void atCallExpr(org.hotswap.agent.javassist.compiler.ast.CallExpr expr) throws org.hotswap.agent.javassist.compiler.CompileError;
+    public abstract void atCallExpr(CallExpr expr) throws CompileError;
 
-    protected abstract void atFieldRead(org.hotswap.agent.javassist.compiler.ast.ASTree expr) throws org.hotswap.agent.javassist.compiler.CompileError;
+    protected abstract void atFieldRead(ASTree expr) throws CompileError;
 
-    public void atClassObject(org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
-        org.hotswap.agent.javassist.compiler.ast.ASTree op1 = expr.oprand1();
-        if (!(op1 instanceof org.hotswap.agent.javassist.compiler.ast.Symbol))
-            throw new org.hotswap.agent.javassist.compiler.CompileError("fatal error: badly parsed .class expr");
+    public void atClassObject(Expr expr) throws CompileError {
+        ASTree op1 = expr.oprand1();
+        if (!(op1 instanceof Symbol))
+            throw new CompileError("fatal error: badly parsed .class expr");
 
-        String cname = ((org.hotswap.agent.javassist.compiler.ast.Symbol) op1).get();
+        String cname = ((Symbol)op1).get();
         if (cname.startsWith("[")) {
             int i = cname.indexOf("[L");
             if (i >= 0) {
@@ -1509,7 +1580,7 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                      * "[Ljava.lang.String;" (not "[Ljava/lang/String"!)
                      * must be passed to Class.forName().
                      */
-                    name2 = org.hotswap.agent.javassist.compiler.MemberResolver.jvmToJavaName(name2);
+                    name2 = MemberResolver.jvmToJavaName(name2);
                     StringBuffer sbuf = new StringBuffer();
                     while (i-- >= 0)
                         sbuf.append('[');
@@ -1518,9 +1589,10 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                     cname = sbuf.toString();
                 }
             }
-        } else {
-            cname = resolveClassName(org.hotswap.agent.javassist.compiler.MemberResolver.javaToJvmName(cname));
-            cname = org.hotswap.agent.javassist.compiler.MemberResolver.jvmToJavaName(cname);
+        }
+        else {
+            cname = resolveClassName(MemberResolver.javaToJvmName(cname));
+            cname = MemberResolver.jvmToJavaName(cname);
         }
 
         atClassObject2(cname);
@@ -1531,18 +1603,18 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
     /* MemberCodeGen overrides this method.
      */
-    protected void atClassObject2(String cname) throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected void atClassObject2(String cname) throws CompileError {
         int start = bytecode.currentPc();
         bytecode.addLdc(cname);
         bytecode.addInvokestatic("java.lang.Class", "forName",
-                "(Ljava/lang/String;)Ljava/lang/Class;");
+                                 "(Ljava/lang/String;)Ljava/lang/Class;");
         int end = bytecode.currentPc();
-        bytecode.addOpcode(org.hotswap.agent.javassist.bytecode.Opcode.GOTO);
+        bytecode.addOpcode(Opcode.GOTO);
         int pc = bytecode.currentPc();
         bytecode.addIndex(0);   // correct later
 
         bytecode.addExceptionHandler(start, end, bytecode.currentPc(),
-                "java.lang.ClassNotFoundException");
+                                     "java.lang.ClassNotFoundException");
 
         /* -- the following code is for inlining a call to DotClass.fail().
 
@@ -1561,32 +1633,34 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
         */
 
         bytecode.growStack(1);
-        bytecode.addInvokestatic("DotClass", "fail",
-                "(Ljava/lang/ClassNotFoundException;)"
-                        + "Ljava/lang/NoClassDefFoundError;");
+        bytecode.addInvokestatic("javassist.runtime.DotClass", "fail",
+                                 "(Ljava/lang/ClassNotFoundException;)"
+                                 + "Ljava/lang/NoClassDefFoundError;");
         bytecode.addOpcode(ATHROW);
         bytecode.write16bit(pc, bytecode.currentPc() - pc + 1);
     }
 
-    public void atArrayRead(org.hotswap.agent.javassist.compiler.ast.ASTree array, org.hotswap.agent.javassist.compiler.ast.ASTree index)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atArrayRead(ASTree array, ASTree index)
+        throws CompileError
+    {
         arrayAccess(array, index);
         bytecode.addOpcode(getArrayReadOp(exprType, arrayDim));
     }
 
-    protected void arrayAccess(org.hotswap.agent.javassist.compiler.ast.ASTree array, org.hotswap.agent.javassist.compiler.ast.ASTree index)
-            throws org.hotswap.agent.javassist.compiler.CompileError {
+    protected void arrayAccess(ASTree array, ASTree index)
+        throws CompileError
+    {
         array.accept(this);
         int type = exprType;
         int dim = arrayDim;
         if (dim == 0)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("bad array access");
+            throw new CompileError("bad array access");
 
         String cname = className;
 
         index.accept(this);
         if (typePrecedence(exprType) != P_INT || arrayDim > 0)
-            throw new org.hotswap.agent.javassist.compiler.CompileError("bad array index");
+            throw new CompileError("bad array index");
 
         exprType = type;
         arrayDim = dim - 1;
@@ -1598,23 +1672,23 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             return AALOAD;
 
         switch (type) {
-            case DOUBLE:
-                return DALOAD;
-            case FLOAT:
-                return FALOAD;
-            case LONG:
-                return LALOAD;
-            case INT:
-                return IALOAD;
-            case SHORT:
-                return SALOAD;
-            case CHAR:
-                return CALOAD;
-            case BYTE:
-            case BOOLEAN:
-                return BALOAD;
-            default:
-                return AALOAD;
+        case DOUBLE :
+            return DALOAD;
+        case FLOAT :
+            return FALOAD;
+        case LONG :
+            return LALOAD;
+        case INT :
+            return IALOAD;
+        case SHORT :
+            return SALOAD;
+        case CHAR :
+            return CALOAD;
+        case BYTE :
+        case BOOLEAN :
+            return BALOAD;
+        default :
+            return AALOAD;
         }
     }
 
@@ -1623,34 +1697,35 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             return AASTORE;
 
         switch (type) {
-            case DOUBLE:
-                return DASTORE;
-            case FLOAT:
-                return FASTORE;
-            case LONG:
-                return LASTORE;
-            case INT:
-                return IASTORE;
-            case SHORT:
-                return SASTORE;
-            case CHAR:
-                return CASTORE;
-            case BYTE:
-            case BOOLEAN:
-                return BASTORE;
-            default:
-                return AASTORE;
+        case DOUBLE :
+            return DASTORE;
+        case FLOAT :
+            return FASTORE;
+        case LONG :
+            return LASTORE;
+        case INT :
+            return IASTORE;
+        case SHORT :
+            return SASTORE;
+        case CHAR :
+            return CASTORE;
+        case BYTE :
+        case BOOLEAN :
+            return BASTORE;
+        default :
+            return AASTORE;
         }
     }
 
-    private void atPlusPlus(int token, org.hotswap.agent.javassist.compiler.ast.ASTree oprand, org.hotswap.agent.javassist.compiler.ast.Expr expr,
-                            boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError {
+    private void atPlusPlus(int token, ASTree oprand, Expr expr,
+                            boolean doDup) throws CompileError
+    {
         boolean isPost = oprand == null;        // ++i or i++?
         if (isPost)
             oprand = expr.oprand2();
 
-        if (oprand instanceof org.hotswap.agent.javassist.compiler.ast.Variable) {
-            org.hotswap.agent.javassist.compiler.ast.Declarator d = ((org.hotswap.agent.javassist.compiler.ast.Variable) oprand).getDeclarator();
+        if (oprand instanceof Variable) {
+            Declarator d = ((Variable)oprand).getDeclarator();
             int t = exprType = d.getType();
             arrayDim = d.getArrayDim();
             int var = getLocalVar(d);
@@ -1668,18 +1743,20 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                     bytecode.addOpcode(DUP2);
 
                 bytecode.addDstore(var);
-            } else if (t == LONG) {
+            }
+            else if (t == LONG) {
                 bytecode.addLload(var);
                 if (doDup && isPost)
                     bytecode.addOpcode(DUP2);
 
-                bytecode.addLconst((long) 1);
+                bytecode.addLconst((long)1);
                 bytecode.addOpcode(token == PLUSPLUS ? LADD : LSUB);
                 if (doDup && !isPost)
                     bytecode.addOpcode(DUP2);
 
                 bytecode.addLstore(var);
-            } else if (t == FLOAT) {
+            }
+            else if (t == FLOAT) {
                 bytecode.addFload(var);
                 if (doDup && isPost)
                     bytecode.addOpcode(DUP);
@@ -1690,7 +1767,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                     bytecode.addOpcode(DUP);
 
                 bytecode.addFstore(var);
-            } else if (t == BYTE || t == CHAR || t == SHORT || t == INT) {
+            }
+            else if (t == BYTE || t == CHAR || t == SHORT || t == INT) {
                 if (doDup && isPost)
                     bytecode.addIload(var);
 
@@ -1700,7 +1778,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
                     bytecode.addOpcode(IINC);
                     bytecode.addIndex(var);
                     bytecode.addIndex(delta);
-                } else {
+                }
+                else {
                     bytecode.addOpcode(IINC);
                     bytecode.add(var);
                     bytecode.add(delta);
@@ -1708,11 +1787,13 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
                 if (doDup && !isPost)
                     bytecode.addIload(var);
-            } else
+            }
+            else
                 badType(expr);
-        } else {
-            if (oprand instanceof org.hotswap.agent.javassist.compiler.ast.Expr) {
-                org.hotswap.agent.javassist.compiler.ast.Expr e = (org.hotswap.agent.javassist.compiler.ast.Expr) oprand;
+        }
+        else {
+            if (oprand instanceof Expr) {
+                Expr e = (Expr)oprand;
                 if (e.getOperator() == ARRAY) {
                     atArrayPlusPlus(token, isPost, e, doDup);
                     return;
@@ -1724,7 +1805,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
     }
 
     public void atArrayPlusPlus(int token, boolean isPost,
-                                org.hotswap.agent.javassist.compiler.ast.Expr expr, boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError {
+                        Expr expr, boolean doDup) throws CompileError
+    {
         arrayAccess(expr.oprand1(), expr.oprand2());
         int t = exprType;
         int dim = arrayDim;
@@ -1740,7 +1822,8 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
 
     protected void atPlusPlusCore(int dup_code, boolean doDup,
                                   int token, boolean isPost,
-                                  org.hotswap.agent.javassist.compiler.ast.Expr expr) throws org.hotswap.agent.javassist.compiler.CompileError {
+                                  Expr expr) throws CompileError
+    {
         int t = exprType;
 
         if (doDup && isPost)
@@ -1750,16 +1833,20 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             bytecode.addIconst(1);
             bytecode.addOpcode(token == PLUSPLUS ? IADD : ISUB);
             exprType = INT;
-        } else if (t == LONG) {
-            bytecode.addLconst((long) 1);
+        }
+        else if (t == LONG) {
+            bytecode.addLconst((long)1);
             bytecode.addOpcode(token == PLUSPLUS ? LADD : LSUB);
-        } else if (t == FLOAT) {
+        }
+        else if (t == FLOAT) {
             bytecode.addFconst(1.0f);
             bytecode.addOpcode(token == PLUSPLUS ? FADD : FSUB);
-        } else if (t == DOUBLE) {
+        }
+        else if (t == DOUBLE) {
             bytecode.addDconst(1.0);
             bytecode.addOpcode(token == PLUSPLUS ? DADD : DSUB);
-        } else
+        }
+        else
             badType(expr);
 
         if (doDup && !isPost)
@@ -1767,12 +1854,12 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
     }
 
     protected abstract void atFieldPlusPlus(int token, boolean isPost,
-                                            org.hotswap.agent.javassist.compiler.ast.ASTree oprand, org.hotswap.agent.javassist.compiler.ast.Expr expr, boolean doDup) throws org.hotswap.agent.javassist.compiler.CompileError;
+                ASTree oprand, Expr expr, boolean doDup) throws CompileError;
 
-    public abstract void atMember(org.hotswap.agent.javassist.compiler.ast.Member n) throws org.hotswap.agent.javassist.compiler.CompileError;
+    public abstract void atMember(Member n) throws CompileError;
 
-    public void atVariable(org.hotswap.agent.javassist.compiler.ast.Variable v) throws org.hotswap.agent.javassist.compiler.CompileError {
-        org.hotswap.agent.javassist.compiler.ast.Declarator d = v.getDeclarator();
+    public void atVariable(Variable v) throws CompileError {
+        Declarator d = v.getDeclarator();
         exprType = d.getType();
         arrayDim = d.getArrayDim();
         className = d.getClassName();
@@ -1782,86 +1869,88 @@ public abstract class CodeGen extends org.hotswap.agent.javassist.compiler.ast.V
             bytecode.addAload(var);
         else
             switch (exprType) {
-                case CLASS:
-                    bytecode.addAload(var);
-                    break;
-                case LONG:
-                    bytecode.addLload(var);
-                    break;
-                case FLOAT:
-                    bytecode.addFload(var);
-                    break;
-                case DOUBLE:
-                    bytecode.addDload(var);
-                    break;
-                default:   // BOOLEAN, BYTE, CHAR, SHORT, INT
-                    bytecode.addIload(var);
-                    break;
+            case CLASS :
+                bytecode.addAload(var);
+                break;
+            case LONG :
+                bytecode.addLload(var);
+                break;
+            case FLOAT :
+                bytecode.addFload(var);
+                break;
+            case DOUBLE :
+                bytecode.addDload(var);
+                break;
+            default :   // BOOLEAN, BYTE, CHAR, SHORT, INT
+                bytecode.addIload(var);
+                break;
             }
     }
 
-    public void atKeyword(org.hotswap.agent.javassist.compiler.ast.Keyword k) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atKeyword(Keyword k) throws CompileError {
         arrayDim = 0;
         int token = k.get();
         switch (token) {
-            case TRUE:
-                bytecode.addIconst(1);
-                exprType = BOOLEAN;
-                break;
-            case FALSE:
-                bytecode.addIconst(0);
-                exprType = BOOLEAN;
-                break;
-            case NULL:
-                bytecode.addOpcode(ACONST_NULL);
-                exprType = NULL;
-                break;
-            case THIS:
-            case SUPER:
-                if (inStaticMethod)
-                    throw new org.hotswap.agent.javassist.compiler.CompileError("not-available: "
-                            + (token == THIS ? "this" : "super"));
+        case TRUE :
+            bytecode.addIconst(1);
+            exprType = BOOLEAN;
+            break;
+        case FALSE :
+            bytecode.addIconst(0);
+            exprType = BOOLEAN;
+            break;
+        case NULL :
+            bytecode.addOpcode(ACONST_NULL);
+            exprType = NULL;
+            break;
+        case THIS :
+        case SUPER :
+            if (inStaticMethod)
+                throw new CompileError("not-available: "
+                                       + (token == THIS ? "this" : "super"));
 
-                bytecode.addAload(0);
-                exprType = CLASS;
-                if (token == THIS)
-                    className = getThisName();
-                else
-                    className = getSuperName();
-                break;
-            default:
-                fatal();
+            bytecode.addAload(0);
+            exprType = CLASS;
+            if (token == THIS)
+                className = getThisName();
+            else
+                className = getSuperName();             
+            break;
+        default :
+            fatal();
         }
     }
 
-    public void atStringL(org.hotswap.agent.javassist.compiler.ast.StringL s) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atStringL(StringL s) throws CompileError {
         exprType = CLASS;
         arrayDim = 0;
         className = jvmJavaLangString;
         bytecode.addLdc(s.get());
     }
 
-    public void atIntConst(org.hotswap.agent.javassist.compiler.ast.IntConst i) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atIntConst(IntConst i) throws CompileError {
         arrayDim = 0;
         long value = i.get();
         int type = i.getType();
         if (type == IntConstant || type == CharConstant) {
             exprType = (type == IntConstant ? INT : CHAR);
-            bytecode.addIconst((int) value);
-        } else {
+            bytecode.addIconst((int)value);
+        }
+        else {
             exprType = LONG;
             bytecode.addLconst(value);
         }
     }
 
-    public void atDoubleConst(org.hotswap.agent.javassist.compiler.ast.DoubleConst d) throws org.hotswap.agent.javassist.compiler.CompileError {
+    public void atDoubleConst(DoubleConst d) throws CompileError {
         arrayDim = 0;
         if (d.getType() == DoubleConstant) {
             exprType = DOUBLE;
             bytecode.addDconst(d.get());
-        } else {
+        }
+        else {
             exprType = FLOAT;
-            bytecode.addFconst((float) d.get());
+            bytecode.addFconst((float)d.get());
         }
     }
 }
